--- a/articles/mariadb/index.yml
+++ b/articles/mariadb/index.yml
@@ -1,14 +1,8 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: dcd0461e185fa97853bcd84e53bb43aacc5799c0
-ms.sourcegitcommit: 6da4959d3a1ffcd8a781b709578668471ec6bf1b
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/27/2019
-ms.locfileid: "58517020"
 documentType: LandingData
 title: Azure Database for MariaDB-dokumentation
 metadata:
-  title: Dokumentation om Azure MariaDB – självstudier, API-referens
+  title: 'Dokumentation om Azure MariaDB – självstudier, API-referens'
   description: Azure Database for MariaDB är en relationsdatabastjänst i Microsoft-molnet som är utformad för utvecklare och baserad på MariaDB-databasmotorn för öppen källkod.
   author: ajlam
   ms.author: andrela
@@ -16,49 +10,49 @@ metadata:
   ms.topic: landing-page
   ms.date: 03/25/2019
 abstract:
-  description: Azure Database for MariaDB är en relationsdatabastjänst baserad på MariaDB-servermotorn för öppen källkod.  Det är en fullständigt hanterad databas som en tjänst som används för att hantera verksamhetskritiska arbetsbelastningar med förutsägbar prestanda och dynamisk skalbarhet. Utveckla program med Azure Database for MariaDB och använd valfria verktyg för plattform och öppen källkod. Lär dig hur du använder Azure Database for MariaDB med våra snabbstarter, självstudier och exempel.
+  description: 'Azure Database for MariaDB är en relationsdatabastjänst baserad på MariaDB-servermotorn för öppen källkod.  Det är en fullständigt hanterad databas som en tjänst som används för att hantera verksamhetskritiska arbetsbelastningar med förutsägbar prestanda och dynamisk skalbarhet. Utveckla program med Azure Database for MariaDB och använd valfria verktyg för plattform och öppen källkod. Lär dig hur du använder Azure Database for MariaDB med våra snabbstarter, självstudier och exempel.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Lär dig hur du skapar en MariaDB-databas på Azure med hjälp av:'
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: /azure/virtual-machines/linux/media/index/portal.svg
-      text: Azure Portal
-      href: /azure/mariadb/quickstart-create-mariadb-server-database-using-azure-portal
-    - image:
-        src: /azure/virtual-machines/linux/media/index/cli.svg
-      text: Azure CLI
-      href: /azure/mariadb/quickstart-create-mariadb-server-database-using-azure-cli
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: 'Lär dig hur du utformar din databas och utvecklar appar:'
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Lär dig hur du skapar en MariaDB-databas på Azure med hjälp av:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/virtual-machines/linux/media/index/portal.svg
+            text: Azure Portal
+            href: /azure/mariadb/quickstart-create-mariadb-server-database-using-azure-portal
+          - image:
+              src: /azure/virtual-machines/linux/media/index/cli.svg
+            text: Azure CLI
+            href: /azure/mariadb/quickstart-create-mariadb-server-database-using-azure-cli
+  - title: Steg för steg-självstudier
     items:
-    - html: Utforma en databas&#58; <a href="/azure/mariadb/tutorial-design-database-using-portal">Azure Portal</a> | <a href="/azure/mariadb/tutorial-design-database-cli">Azure CLI</a>
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Hitta skript för att hantera vanliga uppgifter.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: 'Lär dig hur du utformar din databas och utvecklar appar:'
+      - type: list
+        style: unordered
+        items:
+          - html: 'Utforma en databas&#58; <a href="/azure/mariadb/tutorial-design-database-using-portal">Azure Portal</a> | <a href="/azure/mariadb/tutorial-design-database-cli">Azure CLI</a>'
+  - title: Exempel
     items:
-    - html: <a href="/azure/mariadb/sample-scripts-azure-cli">Azure CLI</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Hitta skript för att hantera vanliga uppgifter.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/mariadb/sample-scripts-azure-cli">Azure CLI</a>
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="/cli/azure/mariadb">Azure CLI</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/mariadb/">REST-API</a></p>
-    - title: Azure Resource Manager
-      html: <p><a href="/azure/templates/microsoft.dbformariadb/allversions">Resource Manager-mallar</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/cli/azure/mariadb">Azure CLI</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/mariadb/">REST-API</a></p>
+          - title: Azure Resource Manager
+            html: <p><a href="/azure/templates/microsoft.dbformariadb/allversions">Resource Manager-mallar</a></p>
