--- a/articles/service-fabric-mesh/TOC.yml
+++ b/articles/service-fabric-mesh/TOC.yml
@@ -1,108 +1,101 @@
-items:
 - name: Dokumentation om Service Fabric Mesh
   href: index.yml
 - name: Översikt
-  items:
-  - name: Om Service Fabric Mesh
-    href: service-fabric-mesh-overview.md
   expanded: true
+  items:
+    - name: Om Service Fabric Mesh
+      href: service-fabric-mesh-overview.md
 - name: Snabbstarter
   items:
-  - name: Distribuera Hello World
-    href: service-fabric-mesh-quickstart-deploy-container.md
-  - name: Skapa en webbapp med Visual Studio
-    href: service-fabric-mesh-quickstart-dotnet-core.md
+    - name: Distribuera Hello World
+      href: service-fabric-mesh-quickstart-deploy-container.md
+    - name: Skapa en webbapp med Visual Studio
+      href: service-fabric-mesh-quickstart-dotnet-core.md
 - name: Självstudier
   items:
-  - name: Skapa och distribuera en Mesh-app med Visual Studio
-    items:
-    - name: 1 – Skapa en Mesh-app
-      href: service-fabric-mesh-tutorial-create-dotnetcore.md
-    - name: 2 – Felsöka en Mesh-app
-      href: service-fabric-mesh-tutorial-debug-service-fabric-mesh-app.md
-    - name: 3 – Distribuera en Mesh-app
-      href: service-fabric-mesh-tutorial-deploy-service-fabric-mesh-app.md
-    - name: 4 – Uppgradera en Mesh-app
-      href: service-fabric-mesh-tutorial-upgrade.md
-    - name: 5 – Rensa Mesh-resurser
-      href: service-fabric-mesh-tutorial-cleanup-resources.md
-  - name: Distribuera, skala och uppgradera en Service Fabric Mesh-app med en mall
-    items:
-    - name: 1 – Distribuera en Service Fabric Mesh-app
-      href: service-fabric-mesh-tutorial-template-deploy-app.md
-    - name: 2 – Skala tjänster i ett program
-      href: service-fabric-mesh-tutorial-template-scale-services.md
-    - name: 3 – Uppgradera ett program
-      href: service-fabric-mesh-tutorial-template-upgrade-app.md
-    - name: 4 – Ta bort ett program
-      href: service-fabric-mesh-tutorial-template-remove-app.md
+    - name: Skapa och distribuera en Mesh-app med Visual Studio
+      items:
+        - name: 1 – Skapa en Mesh-app
+          href: service-fabric-mesh-tutorial-create-dotnetcore.md
+        - name: 2 – Felsöka en Mesh-app
+          href: service-fabric-mesh-tutorial-debug-service-fabric-mesh-app.md
+        - name: 3 – Distribuera en Mesh-app
+          href: service-fabric-mesh-tutorial-deploy-service-fabric-mesh-app.md
+        - name: 4 – Uppgradera en Mesh-app
+          href: service-fabric-mesh-tutorial-upgrade.md
+        - name: 5 – Rensa Mesh-resurser
+          href: service-fabric-mesh-tutorial-cleanup-resources.md
+    - name: 'Distribuera, skala och uppgradera en Service Fabric Mesh-app med en mall'
+      items:
+        - name: 1 – Distribuera en Service Fabric Mesh-app
+          href: service-fabric-mesh-tutorial-template-deploy-app.md
+        - name: 2 – Skala tjänster i ett program
+          href: service-fabric-mesh-tutorial-template-scale-services.md
+        - name: 3 – Uppgradera ett program
+          href: service-fabric-mesh-tutorial-template-upgrade-app.md
+        - name: 4 – Ta bort ett program
+          href: service-fabric-mesh-tutorial-template-remove-app.md
 - name: Begrepp
   items:
-  - name: Terminologi
-    href: service-fabric-mesh-terminology.md
-  - name: Service Fabric-resurser
-    href: service-fabric-mesh-service-fabric-resources.md
-  - name: Nätverk och gatewayer
-    href: service-fabric-mesh-networks-and-gateways.md
-  - name: Tjänstskalbarhet
-    href: service-fabric-mesh-scalability.md
-  - name: Övervakning och diagnostik
-    href: service-fabric-mesh-monitoring-diagnostics.md
-  - name: Lagringstillstånd
-    href: service-fabric-mesh-storing-state.md
-  - name: Hemligheter
-    href: service-fabric-mesh-secrets-overview.md
+    - name: Terminologi
+      href: service-fabric-mesh-terminology.md
+    - name: Service Fabric-resurser
+      href: service-fabric-mesh-service-fabric-resources.md
+    - name: Nätverk och gatewayer
+      href: service-fabric-mesh-networks-and-gateways.md
+    - name: Tjänstskalbarhet
+      href: service-fabric-mesh-scalability.md
+    - name: Övervakning och diagnostik
+      href: service-fabric-mesh-monitoring-diagnostics.md
+    - name: Lagringstillstånd
+      href: service-fabric-mesh-storing-state.md
+    - name: Hemligheter
+      href: service-fabric-mesh-secrets-overview.md
 - name: Instruktionsguider
   items:
-  - name: Ställt in din utvecklingsmiljö
-    href: service-fabric-mesh-howto-setup-developer-environment-sdk.md
-  - name: Konfigurera Service Fabric Mesh CLI
-    href: service-fabric-mesh-howto-setup-cli.md
-  - name: Använd en befintlig .NET-app i container
-    href: service-fabric-mesh-howto-containerize-vs.md
-  - name: Optimera Visual Studio-prestanda
-    href: service-fabric-mesh-howto-optimize-vs.md
-  - name: Konfigurera Gateway-resurser
-    href: service-fabric-mesh-howto-configure-gateways.md
-  - name: Skala tjänster automatiskt
-    href: service-fabric-mesh-howto-auto-scale-services.md
-  - name: Lagringstillstånd med Azure Files-volym
-    href: service-fabric-mesh-howto-deploy-app-azurefiles-volume.md
-  - name: Lagra tillstånd med Service Fabric Reliable Disk-volymen
-    href: service-fabric-mesh-howto-deploy-app-sfreliable-disk-volume.md
-  - name: Hantera hemligheter
-    href: service-fabric-mesh-howto-manage-secrets.md
-  - name: Hitta exempel
-    href: service-fabric-mesh-howto-find-samples.md
+    - name: Ställt in din utvecklingsmiljö
+      href: service-fabric-mesh-howto-setup-developer-environment-sdk.md
+    - name: Konfigurera Service Fabric Mesh CLI
+      href: service-fabric-mesh-howto-setup-cli.md
+    - name: Använd en befintlig .NET-app i container
+      href: service-fabric-mesh-howto-containerize-vs.md
+    - name: Optimera Visual Studio-prestanda
+      href: service-fabric-mesh-howto-optimize-vs.md
+    - name: Konfigurera Gateway-resurser
+      href: service-fabric-mesh-howto-configure-gateways.md
+    - name: Skala tjänster automatiskt
+      href: service-fabric-mesh-howto-auto-scale-services.md
+    - name: Lagringstillstånd med Azure Files-volym
+      href: service-fabric-mesh-howto-deploy-app-azurefiles-volume.md
+    - name: Lagra tillstånd med Service Fabric Reliable Disk-volymen
+      href: service-fabric-mesh-howto-deploy-app-sfreliable-disk-volume.md
+    - name: Hantera hemligheter
+      href: service-fabric-mesh-howto-manage-secrets.md
+    - name: Hitta exempel
+      href: service-fabric-mesh-howto-find-samples.md
 - name: Referens
   items:
-  - name: REST API:er för Service Fabric Mesh-resursprovider
-    href: /rest/api/servicefabric/sfmeshrp-index
-  - name: REST API:er för Service Fabric-klientresurs
-    href: /rest/api/servicefabric/sfclient-index#service-fabric-resource-model
-  - name: Referens för Service Fabric Maven CLI
-    href: service-fabric-mesh-reference-maven.md
-  - name: Resource Manager-mall
-    href: /azure/templates/microsoft.servicefabricmesh/allversions
+    - name: 'REST API:er för Service Fabric Mesh-resursprovider'
+      href: /rest/api/servicefabric/sfmeshrp-index
+    - name: 'REST API:er för Service Fabric-klientresurs'
+      href: '/rest/api/servicefabric/sfclient-index#service-fabric-resource-model'
+    - name: Referens för Service Fabric Maven CLI
+      href: service-fabric-mesh-reference-maven.md
+    - name: Resource Manager-mall
+      href: /azure/templates/microsoft.servicefabricmesh/allversions
 - name: Resurser
   items:
-  - name: Vanliga frågor
-    href: service-fabric-mesh-faq.md
-  - name: Exempelprogram
-    href: https://github.com/Azure-Samples/service-fabric-mesh
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=service-fabric-mesh
-  - name: Stack Overflow
-    href: https://stackoverflow.com/search?q=service-fabric-mesh
-  - name: Videoklipp
-    href: https://azure.microsoft.com/documentation/videos/index/?services=service-fabric
-  - name: Tjänstuppdateringar
-    href: https://azure.microsoft.com/updates/?product=service-fabric-mesh
-  - name: Regional tillgänglighet
-    href: https://azure.microsoft.com/regions/services/
-ms.openlocfilehash: dc098445928ca07eb29260c650321e17f00c7dfe
-ms.sourcegitcommit: a1cf88246e230c1888b197fdb4514aec6f1a8de2
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 01/16/2019
-ms.locfileid: "54353982"
+    - name: Vanliga frågor
+      href: service-fabric-mesh-faq.md
+    - name: Exempelprogram
+      href: 'https://github.com/Azure-Samples/service-fabric-mesh'
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?category=service-fabric-mesh'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/search?q=service-fabric-mesh'
+    - name: Videoklipp
+      href: 'https://azure.microsoft.com/documentation/videos/index/?services=service-fabric'
+    - name: Tjänstuppdateringar
+      href: 'https://azure.microsoft.com/updates/?product=service-fabric-mesh'
+    - name: Regional tillgänglighet
+      href: 'https://azure.microsoft.com/regions/services/'
