--- a/articles/virtual-machines/workloads/mainframe-rehosting/toc.yml
+++ b/articles/virtual-machines/workloads/mainframe-rehosting/toc.yml
@@ -1,55 +1,48 @@
-items:
 - name: Byta värd för stordator
   items:
-  - name: Översikt
-    items:
-    - name: Kom igång
-      href: overview.md
-    - name: Arbetsbelastningar
-      href: partner-workloads.md
-  - name: Begrepp
-    items:
-    - name: Compute
-      href: concepts/mainframe-compute-azure.md
-    - name: Storage
-      href: concepts/mainframe-storage-azure.md
-  - name: Micro Focus
-    items:
-    - name: Kom igång
-      href: microfocus/get-started.md
-    - name: Installera Enterprise Server
-      href: microfocus/set-up-micro-focus-azure.md
-    - name: Kör CICS BankDemo
-      href: microfocus/demo.md
-    - name: Enterprise Server i containrar
-      href: microfocus/run-enterprise-server-container.md
-  - name: TmaxSoft OpenFrame
-    items:
-    - name: Kom igång
-      href: tmaxsoft/get-started.md
-    - name: Installera OpenFrame
-      href: tmaxsoft/install-openframe-azure.md
-  - name: IBM
-    items:
-    - name: Kom igång
-      href: ibm/get-started.md
-    - name: Installera IBM zD&T
-      href: ibm/install-ibm-z-environment.md
-    - name: Konfigurera ADCD i zD&T
-      href: ibm/demo.md
-    - name: IBM DB2 pureScale
-      href: /azure/virtual-machines/linux/ibm-db2-purescale-azure?toc=/azure/virtual-machines/workloads/mainframe-rehosting/toc.json
-    - name: Distribuera IBM Db2 pureScale
-      href: /azure/virtual-machines/linux/deploy-ibm-db2-purescale-azure?toc=/azure/virtual-machines/workloads/mainframe-rehosting/toc.json
-  - name: Resurser
-    items:
-    - name: White paper-faktablad
-      href: mainframe-white-papers.md
-    - name: Azure-översikt
-      href: https://azure.microsoft.com/updates/
-ms.openlocfilehash: c0cec35997d398045f9c34904c8ee07755724572
-ms.sourcegitcommit: c174d408a5522b58160e17a87d2b6ef4482a6694
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 04/18/2019
-ms.locfileid: "59788861"
+    - name: Översikt
+      items:
+        - name: Kom igång
+          href: overview.md
+        - name: Arbetsbelastningar
+          href: partner-workloads.md
+    - name: Begrepp
+      items:
+        - name: Compute
+          href: concepts/mainframe-compute-azure.md
+        - name: Storage
+          href: concepts/mainframe-storage-azure.md
+    - name: Micro Focus
+      items:
+        - name: Kom igång
+          href: microfocus/get-started.md
+        - name: Installera Enterprise Server
+          href: microfocus/set-up-micro-focus-azure.md
+        - name: Kör CICS BankDemo
+          href: microfocus/demo.md
+        - name: Enterprise Server i containrar
+          href: microfocus/run-enterprise-server-container.md
+    - name: TmaxSoft OpenFrame
+      items:
+        - name: Kom igång
+          href: tmaxsoft/get-started.md
+        - name: Installera OpenFrame
+          href: tmaxsoft/install-openframe-azure.md
+    - name: IBM
+      items:
+        - name: Kom igång
+          href: ibm/get-started.md
+        - name: Installera IBM zD&T
+          href: ibm/install-ibm-z-environment.md
+        - name: Konfigurera ADCD i zD&T
+          href: ibm/demo.md
+        - name: IBM DB2 pureScale
+          href: /azure/virtual-machines/linux/ibm-db2-purescale-azure?toc=/azure/virtual-machines/workloads/mainframe-rehosting/toc.json
+        - name: Distribuera IBM Db2 pureScale
+          href: /azure/virtual-machines/linux/deploy-ibm-db2-purescale-azure?toc=/azure/virtual-machines/workloads/mainframe-rehosting/toc.json
+    - name: Resurser
+      items:
+        - name: White paper-faktablad
+          href: mainframe-white-papers.md
+        - name: Azure-översikt
+          href: 'https://azure.microsoft.com/updates/'
