--- a/articles/automation/index.yml
+++ b/articles/automation/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 7e075434b8c785665d28a2981233fc17e2a1ceac
-ms.sourcegitcommit: 333d4246f62b858e376dcdcda789ecbc0c93cd92
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 12/01/2018
-ms.locfileid: "52726346"
 documentType: LandingData
 title: Azure Automation användardokumentation
 metadata:
-  document_id: 
-  title: Dokumentation om Azure Automation – Självstudier, API-referens
+  document_id: null
+  title: 'Dokumentation om Azure Automation – Självstudier, API-referens'
   description: Lär dig hur du använder Azure Automation
   services: automation
   author: georgewallace
@@ -20,48 +14,48 @@ metadata:
   ms.date: 12/13/2017
   ms.author: gwallace
 abstract:
-  description: Lär dig hur du använder Automation för att konfigurera och automatisera åtgärdsuppgifter i en hybridmiljö. Självstudier, API-referenser och annan dokumentation visar hur du kan automatisera processer, utföra uppdateringshantering, leverera önskad tillståndskonfiguration, spåra ändringar och samla inventering.
+  description: 'Lär dig hur du använder Automation för att konfigurera och automatisera åtgärdsuppgifter i en hybridmiljö. Självstudier, API-referenser och annan dokumentation visar hur du kan automatisera processer, utföra uppdateringshantering, leverera önskad tillståndskonfiguration, spåra ändringar och samla inventering.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Lär dig hur du kan automatisera och konfigurera Azure och hybrid-miljön med hjälp av Automation:'
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: /azure/automation/media/index/automation.svg
-      text: Skapa ett Automation-konto
-      href: /azure/automation/automation-quickstart-create-account
-    - image:
-        src: /azure/automation/media/index/runbook.svg
-      text: Skapa en runbook
-      href: /azure/automation/automation-quickstart-create-runbook
-    - image:
-        src: /azure/automation/media/index/dscconfig.svg
-      text: Skapa en DSC-konfiguration
-      href: /azure/automation/automation-quickstart-dsc-configuration
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig mer om att integrera, distribuera och hantera dina Azure och hybrid-miljöer.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Lär dig hur du kan automatisera och konfigurera Azure och hybrid-miljön med hjälp av Automation:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/automation/media/index/automation.svg
+            text: Skapa ett Automation-konto
+            href: /azure/automation/automation-quickstart-create-account
+          - image:
+              src: /azure/automation/media/index/runbook.svg
+            text: Skapa en runbook
+            href: /azure/automation/automation-quickstart-create-runbook
+          - image:
+              src: /azure/automation/media/index/dscconfig.svg
+            text: Skapa en DSC-konfiguration
+            href: /azure/automation/automation-quickstart-dsc-configuration
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/automation/automation-watchers-tutorial">Konfigurera bevakaruppgifter</a>
-    - html: <a href="/azure/automation/automation-tutorial-update-management">Hantera uppdateringar på din virtuella dator</a>
-    - html: <a href="/azure/automation/automation-onboard-solutions">Publicera i skala</a>
-    - html: <a href="/azure/automation/automation-tutorial-installed-software">Identifiera program installerade på en virtuell dator</a>
-    - html: <a href="/azure/automation/automation-tutorial-troubleshoot-changes">Felsök ändringar på en virtuell dator</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: 'Lär dig mer om att integrera, distribuera och hantera dina Azure och hybrid-miljöer.'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/automation/automation-watchers-tutorial">Konfigurera bevakaruppgifter</a>
+          - html: <a href="/azure/automation/automation-tutorial-update-management">Hantera uppdateringar på din virtuella dator</a>
+          - html: <a href="/azure/automation/automation-onboard-solutions">Publicera i skala</a>
+          - html: <a href="/azure/automation/automation-tutorial-installed-software">Identifiera program installerade på en virtuell dator</a>
+          - html: <a href="/azure/automation/automation-tutorial-troubleshoot-changes">Felsök ändringar på en virtuell dator</a>
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="/powershell/module/azurerm.automation">PowerShell</a></p>
-    - title: Språk
-      html: <p><a href="/dotnet/api/microsoft.azure.management.automation">NET</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/automation">Automation REST API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/powershell/module/azurerm.automation">PowerShell</a></p>
+          - title: Språk
+            html: <p><a href="/dotnet/api/microsoft.azure.management.automation">NET</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/automation">Automation REST API</a></p>
