--- a/articles/azure-functions/index.yml
+++ b/articles/azure-functions/index.yml
@@ -1,10 +1,4 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: a539e1db4fb86adb9f1fcf1f478e24e5de5edbdb
-ms.sourcegitcommit: 943af92555ba640288464c11d84e01da948db5c0
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 02/09/2019
-ms.locfileid: "55983244"
 documentType: LandingData
 title: Azure Functions-dokumentation
 metadata:
@@ -21,109 +15,109 @@ metadata:
   ms.date: 08/09/2018
   ms.author: carolz
 abstract:
-  description: Azure Functions är en beräkningstjänst <a href="https://azure.microsoft.com/solutions/serverless/">utan server</a> som gör det möjligt att köra kod på begäran utan att behöva installera eller hantera infrastruktur. Använd Azure Functions för att köra ett skript eller kod som svar på en rad olika händelser. Lär dig hur du använder Azure Functions med våra snabbstarter, självstudier och exempel.
+  description: 'Azure Functions är en beräkningstjänst <a href="https://azure.microsoft.com/solutions/serverless/">utan server</a> som gör det möjligt att köra kod på begäran utan att behöva installera eller hantera infrastruktur. Använd Azure Functions för att köra ett skript eller kod som svar på en rad olika händelser. Lär dig hur du använder Azure Functions med våra snabbstarter, självstudier och exempel.'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
       src: media/index/video-thumb-get-started.png
       width: 250
-    title: Kom igång med Azure Functions. (2:39)
-    href: https://azure.microsoft.com/resources/videos/get-started-with-azure-functions/
+    title: 'Kom igång med Azure Functions. (2:39)'
+    href: 'https://azure.microsoft.com/resources/videos/get-started-with-azure-functions/'
     width: 250
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Lär dig att skapa funktioner som körs baserat på händelser som skapats via:'
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: https://docs.microsoft.com/media/common/i_http.svg
-      text: HTTP
-      href: /azure/azure-functions/functions-create-first-azure-function
-    - image:
-        src: media/index/stopwatch.svg
-      text: Timer
-      href: /azure/azure-functions/functions-create-scheduled-function
-    - image:
-        src: media/index/cosmosdb.svg
-      text: Azure Cosmos DB
-      href: /azure/azure-functions/functions-create-cosmos-db-triggered-function
-    - image:
-        src: media/index/blob.svg
-      text: Blob
-      href: /azure/azure-functions/functions-create-storage-blob-triggered-function
-    - image:
-        src: media/index/storage.svg
-      text: Kö
-      href: /azure/azure-functions/functions-create-storage-queue-triggered-function
-  - type: paragraph
-    text: 'Lär dig hur du utvecklar och felsöker lokalt:'
-  - type: list
-    style: icon48
+      - type: paragraph
+        text: 'Lär dig att skapa funktioner som körs baserat på händelser som skapats via:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_http.svg'
+            text: HTTP
+            href: /azure/azure-functions/functions-create-first-azure-function
+          - image:
+              src: media/index/stopwatch.svg
+            text: Timer
+            href: /azure/azure-functions/functions-create-scheduled-function
+          - image:
+              src: media/index/cosmosdb.svg
+            text: Azure Cosmos DB
+            href: /azure/azure-functions/functions-create-cosmos-db-triggered-function
+          - image:
+              src: media/index/blob.svg
+            text: Blob
+            href: /azure/azure-functions/functions-create-storage-blob-triggered-function
+          - image:
+              src: media/index/storage.svg
+            text: Kö
+            href: /azure/azure-functions/functions-create-storage-queue-triggered-function
+      - type: paragraph
+        text: 'Lär dig hur du utvecklar och felsöker lokalt:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_visual-studio.svg'
+            text: Visual Studio
+            href: /azure/azure-functions/functions-create-your-first-function-visual-studio
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_vs-code.svg'
+            text: Visual Studio-koden
+            href: /azure/azure-functions/functions-create-first-function-vs-code
+  - title: Steg för steg-självstudier
     items:
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_visual-studio.svg
-      text: Visual Studio
-      href: /azure/azure-functions/functions-create-your-first-function-visual-studio
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_vs-code.svg
-      text: Visual Studio-koden
-      href: /azure/azure-functions/functions-create-first-function-vs-code
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: 'Lär dig hur du skapar och hanterar Azure Functions:'
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Lär dig hur du skapar och hanterar Azure Functions:'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/azure-functions/functions-twitter-email">Skapa en funktion som kan integreras med Azure Logic Apps</a>
+          - html: <a href="/azure/azure-functions/functions-create-serverless-api">Skapa ett API utan server med Azure Functions</a>
+          - html: <a href="/azure/azure-functions/functions-openapi-definition">Skapa en definition för OpenAPI för en funktion</a>
+          - html: <a href="/azure/event-grid/resize-images-on-storage-blob-upload-event">Automatisera storleksändring av överförda bilder med Event Grid</a>
+          - html: '<a href="https://docs.microsoft.com/azure/functions/tutorial-static-website-serverless-api-with-database">Skapa en webbapp utan server för att lagra bilder med metadata</a>'
+  - title: Exempel
     items:
-    - html: <a href="/azure/azure-functions/functions-twitter-email">Skapa en funktion som kan integreras med Azure Logic Apps</a>
-    - html: <a href="/azure/azure-functions/functions-create-serverless-api">Skapa ett API utan server med Azure Functions</a>
-    - html: <a href="/azure/azure-functions/functions-openapi-definition">Skapa en definition för OpenAPI för en funktion</a>
-    - html: <a href="/azure/event-grid/resize-images-on-storage-blob-upload-event">Automatisera storleksändring av överförda bilder med Event Grid</a>
-    - html: <a href="https://docs.microsoft.com/azure/functions/tutorial-static-website-serverless-api-with-database">Skapa en webbapp utan server för att lagra bilder med metadata</a>
-- title: Exempel
-  items:
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/azure-functions/functions-cli-samples">Azure CLI</a>
+          - html: <a href="/sandbox/functions-recipes/">Azure Functions-recept</a>
+  - title: Utveckla dina färdigheter med Microsoft Learn
     items:
-    - html: <a href="/azure/azure-functions/functions-cli-samples">Azure CLI</a>
-    - html: <a href="/sandbox/functions-recipes/">Azure Functions-recept</a>
-- title: Utveckla dina färdigheter med Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Skapa serverlös logik med Azure Functions
+            href: /learn/modules/create-serverless-logic-with-azure-functions/
+            image:
+              src: /learn/achievements/create-serverless-logic-with-azure-functions.svg
+              href: /learn/modules/create-serverless-logic-with-azure-functions/
+          - title: Köra en Azure-funktion med utlösare
+            href: /learn/modules/execute-azure-function-with-triggers/
+            image:
+              src: /learn/achievements/execute-azure-function-with-triggers.svg
+              href: /learn/modules/execute-azure-function-with-triggers/
+          - title: Kedja samman Azure Functions och data med hjälp av indata- och utdatabindningar
+            href: /learn/modules/chain-azure-functions-data-using-bindings/
+            image:
+              src: /learn/achievements/chain-azure-functions-data-using-bindings.svg
+              href: /learn/modules/chain-azure-functions-data-using-bindings/
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-functions">Mer interaktiv inlärning...</a>
+  - title: Referens
     items:
-    - title: Skapa serverlös logik med Azure Functions
-      href: /learn/modules/create-serverless-logic-with-azure-functions/
-      image:
-        src: /learn/achievements/create-serverless-logic-with-azure-functions.svg
-        href: /learn/modules/create-serverless-logic-with-azure-functions/
-    - title: Köra en Azure-funktion med utlösare
-      href: /learn/modules/execute-azure-function-with-triggers/
-      image:
-        src: /learn/achievements/execute-azure-function-with-triggers.svg
-        href: /learn/modules/execute-azure-function-with-triggers/
-    - title: Kedja samman Azure Functions och data med hjälp av indata- och utdatabindningar
-      href: /learn/modules/chain-azure-functions-data-using-bindings/
-      image:
-        src: /learn/achievements/chain-azure-functions-data-using-bindings.svg
-        href: /learn/modules/chain-azure-functions-data-using-bindings/
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-functions">Mer interaktiv inlärning...</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
-    items:
-    - title: Kommandorad
-      html: <p><a href="/cli/azure">Azure CLI</a></p>
-    - title: REST
-      html: <p><a href="/azure/azure-functions/functions-api-definition">OpenAPI</a></p>
-    - title: Bindningar
-      html: <p><a href="/azure/azure-functions/functions-bindings-storage-blob">Blob Storage</a></p><p><a href="/azure/azure-functions/functions-bindings-documentdb">Azure Cosmos DB</a></p><p><a href="/azure/azure-functions/functions-bindings-event-hubs">Händelsehubb</a></p><p><a href="/azure/azure-functions/functions-bindings-http-webhook">HTTP och webhooks</a></p><p><a href="/azure/azure-functions/functions-bindings-mobile-apps">Mobile Apps</a></p><p><a href="/azure/azure-functions/functions-bindings-notification-hubs">Notification Hubs</a></p><p><a href="/azure/azure-functions/functions-bindings-storage-queue">Queue Storage</a></p><p><a href="/azure/azure-functions/functions-bindings-sendgrid">SendGrid</a></p><p><a href="/azure/azure-functions/functions-bindings-service-bus">Service Bus</a></p><p><a href="/azure/azure-functions/functions-bindings-signalr-service">SignalR Service</a></p><p><a href="/azure/azure-functions/functions-bindings-storage-table">Table Storage</a></p><p><a href="/azure/azure-functions/functions-bindings-timer">Timer</a></p><p><a href="/azure/azure-functions/functions-bindings-twilio">Twilio-utdatabindning</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/cli/azure">Azure CLI</a></p>
+          - title: REST
+            html: <p><a href="/azure/azure-functions/functions-api-definition">OpenAPI</a></p>
+          - title: Bindningar
+            html: <p><a href="/azure/azure-functions/functions-bindings-storage-blob">Blob Storage</a></p><p><a href="/azure/azure-functions/functions-bindings-documentdb">Azure Cosmos DB</a></p><p><a href="/azure/azure-functions/functions-bindings-event-hubs">Händelsehubb</a></p><p><a href="/azure/azure-functions/functions-bindings-http-webhook">HTTP och webhooks</a></p><p><a href="/azure/azure-functions/functions-bindings-mobile-apps">Mobile Apps</a></p><p><a href="/azure/azure-functions/functions-bindings-notification-hubs">Notification Hubs</a></p><p><a href="/azure/azure-functions/functions-bindings-storage-queue">Queue Storage</a></p><p><a href="/azure/azure-functions/functions-bindings-sendgrid">SendGrid</a></p><p><a href="/azure/azure-functions/functions-bindings-service-bus">Service Bus</a></p><p><a href="/azure/azure-functions/functions-bindings-signalr-service">SignalR Service</a></p><p><a href="/azure/azure-functions/functions-bindings-storage-table">Table Storage</a></p><p><a href="/azure/azure-functions/functions-bindings-timer">Timer</a></p><p><a href="/azure/azure-functions/functions-bindings-twilio">Twilio-utdatabindning</a></p>
