--- a/articles/cognitive-services/bing-local-business-search/index.yml
+++ b/articles/cognitive-services/bing-local-business-search/index.yml
@@ -1,16 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 888ed15344ff3709a7a84d5be7e863535bed1792
-ms.sourcegitcommit: 90c6b63552f6b7f8efac7f5c375e77526841a678
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 02/23/2019
-ms.locfileid: "56734701"
 documentType: LandingData
 title: Dokumentation om API för sökning efter lokala företag i Bing
 titleSuffix: Azure Cognitive Services
 metadata:
   title: Dokumentation om API för sökning efter lokala företag i Bing
-  description: API:et för sökning efter lokala företag i Bing är en RESTful-tjänst som gör det möjligt för dina program att hitta lokala företag utifrån sökkriterier.
+  description: 'API:et för sökning efter lokala företag i Bing är en RESTful-tjänst som gör det möjligt för dina program att hitta lokala företag utifrån sökkriterier.'
   services: cognitive-services
   author: mikedodaro
   manager: rosh
@@ -19,44 +13,45 @@ metadata:
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 08/02/2018
-  ms.author: rosh, v-gedod
+  ms.author: 'rosh, v-gedod'
 abstract:
-  description: API:et för sökning efter lokala företag i Bing gör det möjligt för dina program att hitta kontakt- och platsinformation om lokala företag utifrån sökkriterier.
+  description: 'API:et för sökning efter lokala företag i Bing gör det möjligt för dina program att hitta kontakt- och platsinformation om lokala företag utifrån sökkriterier.'
 sections:
-- title: Snabbstarter
-  items:
-  - type: paragraph
-    text: 'Kom igång med hjälp av API:et för sökning efter lokala företag i Bing genom att skicka sökfrågor och visa JSON-svaret:'
-  - type: list
-    style: icon48
+  - title: Snabbstarter
     items:
-    - image:
-        src: media/logo_csharp.svg
-      href: quickstarts/local-quickstart.md
-      text: C#
-    - image:
-        src: media/logo_java.svg
-      href: quickstarts/local-search-java-quickstart.md
-      text: Java
-    - image:
-        src: media/logo_nodejs.svg
-      href: quickstarts/local-search-node-quickstart.md
-      text: Node
-    - image:
-        src: media/logo_python.svg
-      href: quickstarts/local-search-python-quickstart.md
-      text: Python
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: 'Kom igång med hjälp av API:et för sökning efter lokala företag i Bing genom att skicka sökfrågor och visa JSON-svaret:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: media/logo_csharp.svg
+            href: quickstarts/local-quickstart.md
+            text: 'C#'
+          - image:
+              src: media/logo_java.svg
+            href: quickstarts/local-search-java-quickstart.md
+            text: Java
+          - image:
+              src: media/logo_nodejs.svg
+            href: quickstarts/local-search-node-quickstart.md
+            text: Node
+          - image:
+              src: media/logo_python.svg
+            href: quickstarts/local-search-python-quickstart.md
+            text: Python
+  - title: Referens
     items:
-    - title: REST-API
-      html: >
-        <p><a href="local-search-reference.md">REST API-referens</a></p>
-    - title: PowerShell
-      html: >
-        <p><a href=https://docs.microsoft.com/powershell/module/az.cognitiveservices/#cognitive_services">Azure PowerShell</a></p>
-    - title: CLI
-      html: <p><a href="https://docs.microsoft.com/cli/azure/cognitiveservices?view=azure-cli-latest">Azure CLI</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: REST-API
+            html: |
+              <p><a href="local-search-reference.md">REST API-referens</a></p>
+          - title: PowerShell
+            html: |
+              <p><a href=https://docs.microsoft.com/powershell/module/az.cognitiveservices/#cognitive_services">Azure PowerShell</a></p>
+          - title: CLI
+            html: |
+              <p><a href="https://docs.microsoft.com/cli/azure/cognitiveservices?view=azure-cli-latest">Azure CLI</a></p>
