--- a/articles/data-catalog/TOC.yml
+++ b/articles/data-catalog/TOC.yml
@@ -1,91 +1,84 @@
-items:
 - name: Dokumentation om Data Catalog
   href: index.yml
 - name: Översikt
   items:
-  - name: Vad är Data Catalog?
-    href: overview.md
+    - name: Vad är Data Catalog?
+      href: overview.md
 - name: Snabbstart
   items:
-  - name: Skapa Azure Data Catalog
-    href: data-catalog-get-started.md
+    - name: Skapa Azure Data Catalog
+      href: data-catalog-get-started.md
 - name: Självstudier
   items:
-  - name: Registrera datatillgångar
-    href: register-data-assets-tutorial.md
+    - name: Registrera datatillgångar
+      href: register-data-assets-tutorial.md
 - name: Begrepp
   items:
-  - name: Vanliga scenarier
-    href: data-catalog-common-scenarios.md
-  - name: Datakällor som stöds
-    href: data-catalog-dsr.md
-  - name: Börja använda Azure Data Catalog
-    href: data-catalog-adopting-data-catalog.md
-  - name: Nödvändiga komponenter
-    href: data-catalog-prerequisites.md
-  - name: VANLIGA FRÅGOR OCH SVAR
-    href: data-catalog-frequently-asked-questions.md
+    - name: Vanliga scenarier
+      href: data-catalog-common-scenarios.md
+    - name: Datakällor som stöds
+      href: data-catalog-dsr.md
+    - name: Börja använda Azure Data Catalog
+      href: data-catalog-adopting-data-catalog.md
+    - name: Nödvändiga komponenter
+      href: data-catalog-prerequisites.md
+    - name: VANLIGA FRÅGOR OCH SVAR
+      href: data-catalog-frequently-asked-questions.md
 - name: Gör så här för att
   items:
-  - name: Registrera datakällor
-    href: data-catalog-how-to-register.md
-  - name: Identifiera datakällor
-    href: data-catalog-how-to-discover.md
-  - name: Kommentera datakällor
-    href: data-catalog-how-to-annotate.md
-  - name: Dokumentera datakällor
-    href: data-catalog-how-to-documentation.md
-  - name: Anslut till datakällor
-    href: data-catalog-how-to-connect.md
-  - name: Arbeta med stordatakällor
-    href: data-catalog-how-to-big-data.md
-  - name: Datakällor för dataprofil
-    href: data-catalog-how-to-data-profile.md
-  - name: Hantera datatillgångar
-    href: data-catalog-how-to-manage.md
-  - name: Spara sökningar och fäst datatillgångar
-    href: data-catalog-how-to-save-pin.md
-  - name: Konfigurera företagsordlistan
-    href: data-catalog-how-to-business-glossary.md
-  - name: Säker åtkomst till datakatalog
-    href: data-catalog-how-to-secure-catalog.md
-  - name: Visa relaterade datatillgångar
-    href: data-catalog-how-to-view-related-data-assets.md
-  - name: Felsöka
-    href: troubleshoot-policy-configuration.md
+    - name: Registrera datakällor
+      href: data-catalog-how-to-register.md
+    - name: Identifiera datakällor
+      href: data-catalog-how-to-discover.md
+    - name: Kommentera datakällor
+      href: data-catalog-how-to-annotate.md
+    - name: Dokumentera datakällor
+      href: data-catalog-how-to-documentation.md
+    - name: Anslut till datakällor
+      href: data-catalog-how-to-connect.md
+    - name: Arbeta med stordatakällor
+      href: data-catalog-how-to-big-data.md
+    - name: Datakällor för dataprofil
+      href: data-catalog-how-to-data-profile.md
+    - name: Hantera datatillgångar
+      href: data-catalog-how-to-manage.md
+    - name: Spara sökningar och fäst datatillgångar
+      href: data-catalog-how-to-save-pin.md
+    - name: Konfigurera företagsordlistan
+      href: data-catalog-how-to-business-glossary.md
+    - name: Säker åtkomst till datakatalog
+      href: data-catalog-how-to-secure-catalog.md
+    - name: Visa relaterade datatillgångar
+      href: data-catalog-how-to-view-related-data-assets.md
+    - name: Felsöka
+      href: troubleshoot-policy-configuration.md
 - name: Referens
   items:
-  - name: Kodexempel
-    href: https://azure.microsoft.com/resources/samples/?service=data-catalog
-  - name: REST
-    href: /rest/api/datacatalog/
-  - name: Resource Manager-mall
-    href: /azure/templates/microsoft.datacatalog/catalogs
-  - name: Sök i syntaxreferens
-    href: /rest/api/datacatalog/data-catalog-search-syntax-reference
-  - name: Utvecklarkoncept
-    href: data-catalog-developer-concepts.md
+    - name: Kodexempel
+      href: 'https://azure.microsoft.com/resources/samples/?service=data-catalog'
+    - name: REST
+      href: /rest/api/datacatalog/
+    - name: Resource Manager-mall
+      href: /azure/templates/microsoft.datacatalog/catalogs
+    - name: Sök i syntaxreferens
+      href: /rest/api/datacatalog/data-catalog-search-syntax-reference
+    - name: Utvecklarkoncept
+      href: data-catalog-developer-concepts.md
 - name: Resurser
   items:
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/
-  - name: Kortkommandon för Azure Data Catalog
-    href: data-catalog-keyboard-shortcuts.md
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/Forums/en-US/home?forum=azuredatacatalog
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/data-catalog/
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Tjänstuppdateringar
-    href: https://azure.microsoft.com/updates/?product=data-catalog
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-data-catalog
-  - name: Terminologi
-    href: data-catalog-terminology.md
-ms.openlocfilehash: 0ef4cb62b8991db67df52fded512c1881050eac3
-ms.sourcegitcommit: c174d408a5522b58160e17a87d2b6ef4482a6694
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 04/18/2019
-ms.locfileid: "59793937"
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Kortkommandon för Azure Data Catalog
+      href: data-catalog-keyboard-shortcuts.md
+    - name: MSDN-forum
+      href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=azuredatacatalog'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/data-catalog/'
+    - name: Priskalkylator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Tjänstuppdateringar
+      href: 'https://azure.microsoft.com/updates/?product=data-catalog'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-data-catalog'
+    - name: Terminologi
+      href: data-catalog-terminology.md
