--- a/articles/guides/developer/TOC.yml
+++ b/articles/guides/developer/TOC.yml
@@ -1,209 +1,202 @@
-items:
 - name: Översikt
   items:
-  - name: Utvecklarguide
-    href: azure-developer-guide.md
-  - name: SDK:er och verktyg
-    href: https://docs.microsoft.com/azure/index#pivot=sdkstools
+    - name: Utvecklarguide
+      href: azure-developer-guide.md
+    - name: 'SDK:er och verktyg'
+      href: 'https://docs.microsoft.com/azure/index#pivot=sdkstools'
 - name: Snabbstart
   items:
-  - name: Web Apps
-    href: https://docs.microsoft.com/azure/app-service/app-service-web-get-started-html
-  - name: Virtuella datorer
-    items:
-    - name: Linux
-      href: https://docs.microsoft.com/azure/virtual-machines/linux/quick-create-portal
-    - name: Windows
-      href: https://docs.microsoft.com/azure/virtual-machines/windows/quick-create-portal
-  - name: Utan server
-    href: https://docs.microsoft.com/azure/azure-functions/functions-create-first-azure-function
-  - name: Mikrotjänster
-    items:
-    - name: Service Fabric
-      href: https://docs.microsoft.com/azure/service-fabric/service-fabric-create-your-first-application-in-visual-studio
-    - name: Container Service
-      href: https://docs.microsoft.com/azure/container-service/dcos-swarm/container-service-deployment
+    - name: Web Apps
+      href: 'https://docs.microsoft.com/azure/app-service/app-service-web-get-started-html'
+    - name: Virtuella datorer
+      items:
+        - name: Linux
+          href: 'https://docs.microsoft.com/azure/virtual-machines/linux/quick-create-portal'
+        - name: Windows
+          href: 'https://docs.microsoft.com/azure/virtual-machines/windows/quick-create-portal'
+    - name: Utan server
+      href: 'https://docs.microsoft.com/azure/azure-functions/functions-create-first-azure-function'
+    - name: Mikrotjänster
+      items:
+        - name: Service Fabric
+          href: 'https://docs.microsoft.com/azure/service-fabric/service-fabric-create-your-first-application-in-visual-studio'
+        - name: Container Service
+          href: 'https://docs.microsoft.com/azure/container-service/dcos-swarm/container-service-deployment'
 - name: Självstudier
   items:
-  - name: Skapa och distribuera en webbapp
-    items:
-    - name: .NET med SQL DB
-      href: https://docs.microsoft.com/azure/app-service/app-service-web-tutorial-dotnet-sqldatabase
-    - name: Node.js med Mongo DB
-      href: https://docs.microsoft.com/azure/app-service/app-service-web-tutorial-nodejs-mongodb-app
-    - name: PHP med MySQL
-      href: https://docs.microsoft.com/azure/app-service/app-service-web-tutorial-php-mysql
-    - name: Java med MySQL
-      href: https://docs.microsoft.com/azure/app-service/app-service-web-tutorial-java-mysql
-  - name: Distribuera komplexa VM-mallar
-    items:
-    - name: Linux
-      href: https://docs.microsoft.com/azure/virtual-machines/linux/tutorial-manage-vm
-    - name: Windows
-      href: https://docs.microsoft.com/azure/virtual-machines/windows/tutorial-manage-vm
-  - name: Skapa en Azure-ansluten funktion
-    href: https://docs.microsoft.com/azure/azure-functions/functions-create-an-azure-connected-function
-  - name: Docker-distribution av webbappar i Linux
-    href: https://docs.microsoft.com/azure/app-service/containers/quickstart-docker-go
+    - name: Skapa och distribuera en webbapp
+      items:
+        - name: .NET med SQL DB
+          href: 'https://docs.microsoft.com/azure/app-service/app-service-web-tutorial-dotnet-sqldatabase'
+        - name: Node.js med Mongo DB
+          href: 'https://docs.microsoft.com/azure/app-service/app-service-web-tutorial-nodejs-mongodb-app'
+        - name: PHP med MySQL
+          href: 'https://docs.microsoft.com/azure/app-service/app-service-web-tutorial-php-mysql'
+        - name: Java med MySQL
+          href: 'https://docs.microsoft.com/azure/app-service/app-service-web-tutorial-java-mysql'
+    - name: Distribuera komplexa VM-mallar
+      items:
+        - name: Linux
+          href: 'https://docs.microsoft.com/azure/virtual-machines/linux/tutorial-manage-vm'
+        - name: Windows
+          href: 'https://docs.microsoft.com/azure/virtual-machines/windows/tutorial-manage-vm'
+    - name: Skapa en Azure-ansluten funktion
+      href: 'https://docs.microsoft.com/azure/azure-functions/functions-create-an-azure-connected-function'
+    - name: Docker-distribution av webbappar i Linux
+      href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-docker-go'
 - name: Exempel
   items:
-  - name: Azure CLI
-    items:
-    - name: Web Apps
-      href: https://docs.microsoft.com/azure/app-service/samples-cli
-    - name: Virtuell Linux-dator
-      href: https://docs.microsoft.com/azure/virtual-machines/linux/cli-samples
-    - name: Virtuell Windows-dator
-      href: https://docs.microsoft.com/azure/virtual-machines/windows/cli-samples
-  - name: Azure PowerShell
-    items:
-    - name: Web Apps
-      href: https://docs.microsoft.com/azure/app-service/samples-powershell
-    - name: Virtuell Linux-dator
-      href: https://docs.microsoft.com/azure/virtual-machines/linux/powershell-samples
-    - name: Virtuell Windows-dator
-      href: https://docs.microsoft.com/azure/virtual-machines/windows/powershell-samples
+    - name: Azure CLI
+      items:
+        - name: Web Apps
+          href: 'https://docs.microsoft.com/azure/app-service/samples-cli'
+        - name: Virtuell Linux-dator
+          href: 'https://docs.microsoft.com/azure/virtual-machines/linux/cli-samples'
+        - name: Virtuell Windows-dator
+          href: 'https://docs.microsoft.com/azure/virtual-machines/windows/cli-samples'
+    - name: Azure PowerShell
+      items:
+        - name: Web Apps
+          href: 'https://docs.microsoft.com/azure/app-service/samples-powershell'
+        - name: Virtuell Linux-dator
+          href: 'https://docs.microsoft.com/azure/virtual-machines/linux/powershell-samples'
+        - name: Virtuell Windows-dator
+          href: 'https://docs.microsoft.com/azure/virtual-machines/windows/powershell-samples'
 - name: Begrepp
   items:
-  - name: Fakturering och prenumerationer
-    href: https://docs.microsoft.com/azure/billing/billing-getting-started
-  - name: Jämförelser av värdtjänster
-    href: https://docs.microsoft.com/azure/app-service/overview-compare
-  - name: Vad är App Service?
-    href: https://docs.microsoft.com/azure/app-service/overview
-  - name: Virtuella datorer
-    items:
-    - name: Virtuella Linux-datorer
-      href: https://docs.microsoft.com/azure/virtual-machines/linux/overview
-    - name: Virtuella Windows-datorer
-      href: https://docs.microsoft.com/azure/virtual-machines/windows/overview
-  - name: Översikt över Service Fabric
-    href: https://docs.microsoft.com/azure/service-fabric/service-fabric-overview
+    - name: Fakturering och prenumerationer
+      href: 'https://docs.microsoft.com/azure/billing/billing-getting-started'
+    - name: Jämförelser av värdtjänster
+      href: 'https://docs.microsoft.com/azure/app-service/overview-compare'
+    - name: Vad är App Service?
+      href: 'https://docs.microsoft.com/azure/app-service/overview'
+    - name: Virtuella datorer
+      items:
+        - name: Virtuella Linux-datorer
+          href: 'https://docs.microsoft.com/azure/virtual-machines/linux/overview'
+        - name: Virtuella Windows-datorer
+          href: 'https://docs.microsoft.com/azure/virtual-machines/windows/overview'
+    - name: Översikt över Service Fabric
+      href: 'https://docs.microsoft.com/azure/service-fabric/service-fabric-overview'
 - name: Guider
   items:
-  - name: Planera
-    items:
-    - name: Arkitekturer för webbappar
-      href: https://docs.microsoft.com/azure/architecture/reference-architectures/managed-web-app/
-    - name: Arkitekturer för virtuella datorer
-      href: https://docs.microsoft.com/azure/architecture/reference-architectures/virtual-machines-windows/
-    - name: Ansluta till lokala nätverk
-      href: https://docs.microsoft.com/azure/architecture/reference-architectures/hybrid-networking/
-    - name: Mönster/scenarier för mikrotjänster
-      href: https://docs.microsoft.com/azure/service-fabric/service-fabric-patterns-and-scenarios
-  - name: Utveckla
-    items:
-    - name: Virtuell Linux-dator
-      href: https://docs.microsoft.com/azure/virtual-machines/linux/create-ssh-secured-vm-from-template
-    - name: Virtuell Windows-dator
-      href: https://docs.microsoft.com/azure/virtual-machines/windows/ps-template
-    - name: Serverlösa appar
-      href: https://docs.microsoft.com/azure/azure-functions/functions-reference
-    - name: Kluster för mikrotjänster
-      href: https://docs.microsoft.com/azure/service-fabric/service-fabric-cluster-creation-via-portal
-  - name: Distribuera
-    items:
-    - name: Webb- och mobilappar från källkontroll
-      href: https://docs.microsoft.com/azure/app-service/deploy-continuous-deployment
-    - name: Mikrotjänster lokalt
-      href: https://docs.microsoft.com/azure/service-fabric/service-fabric-get-started-with-a-local-cluster
-    - name: Virtuell Linux-dator
-      href: https://docs.microsoft.com/azure/virtual-machines/linux/tutorial-manage-vm
-    - name: Virtuell Windows-dator
-      href: https://docs.microsoft.com/azure/virtual-machines/windows/tutorial-manage-vm
-  - name: Lagra data
-    items:
-    - name: Blobar
-      href: https://docs.microsoft.com/azure/storage/blobs/storage-dotnet-how-to-use-blobs
-    - name: Filresurser
-      href: https://docs.microsoft.com/azure/storage/files/storage-dotnet-how-to-use-files
-    - name: Nyckel/värde-par
-      href: https://docs.microsoft.com/azure/cosmos-db/create-table-dotnet
-    - name: JSON-dokument
-      href: https://docs.microsoft.com/azure/cosmos-db/create-sql-api-dotnet
-    - name: Relationstabeller
-      href: https://docs.microsoft.com/azure/sql-database/sql-database-get-started
-    - name: Meddelandeköer
-      href: https://docs.microsoft.com/azure/storage/queues/storage-dotnet-how-to-use-queues
-  - name: Skala
-    items:
-    - name: Webb- och mobilappar
-      href: https://docs.microsoft.com/azure/app-service/web-sites-scale
-    - name: Virtuella datorer
-      href: https://docs.microsoft.com/azure/virtual-machine-scale-sets/virtual-machine-scale-sets-overview
-    - name: Mikrotjänstappar
-      href: https://docs.microsoft.com/azure/service-fabric/service-fabric-concepts-scalability
-  - name: Skydda
-    items:
-    - name: Webb- och mobilappar
-      href: https://docs.microsoft.com/azure/app-service/app-service-web-tutorial-custom-ssl
-  - name: Backup
-    items:
-    - name: Webb- och mobilappar
-      href: https://docs.microsoft.com/azure/app-service/manage-backup
-    - name: Virtuella datorer
-      href: https://docs.microsoft.com/azure/backup/backup-azure-vms-introduction
-  - name: Övervaka
-    items:
-    - name: Webb- och mobilappar
-      href: https://docs.microsoft.com/azure/app-service/troubleshoot-diagnostic-logs
-    - name: Virtuell Linux-dator
-      href: https://docs.microsoft.com/azure/virtual-machines/linux/tutorial-monitoring
-    - name: Virtuell Windows-dator
-      href: https://docs.microsoft.com/azure/virtual-machines/windows/tutorial-monitoring
-    - name: Mikrotjänster
-      href: https://docs.microsoft.com/azure/service-fabric/service-fabric-diagnostics-overview
-    - name: Faktureringsaviseringar
-      href: https://docs.microsoft.com/azure/billing/billing-set-up-alerts
-  - name: Automatisera
-    items:
-    - name: Skala virtuell Linux-dator
-      href: https://docs.microsoft.com/azure/virtual-machines/linux/tutorial-create-vmss
-    - name: Skala virtuell Windows-dator
-      href: https://docs.microsoft.com/azure/virtual-machines/windows/tutorial-create-vmss
+    - name: Planera
+      items:
+        - name: Arkitekturer för webbappar
+          href: 'https://docs.microsoft.com/azure/architecture/reference-architectures/managed-web-app/'
+        - name: Arkitekturer för virtuella datorer
+          href: 'https://docs.microsoft.com/azure/architecture/reference-architectures/virtual-machines-windows/'
+        - name: Ansluta till lokala nätverk
+          href: 'https://docs.microsoft.com/azure/architecture/reference-architectures/hybrid-networking/'
+        - name: Mönster/scenarier för mikrotjänster
+          href: 'https://docs.microsoft.com/azure/service-fabric/service-fabric-patterns-and-scenarios'
+    - name: Utveckla
+      items:
+        - name: Virtuell Linux-dator
+          href: 'https://docs.microsoft.com/azure/virtual-machines/linux/create-ssh-secured-vm-from-template'
+        - name: Virtuell Windows-dator
+          href: 'https://docs.microsoft.com/azure/virtual-machines/windows/ps-template'
+        - name: Serverlösa appar
+          href: 'https://docs.microsoft.com/azure/azure-functions/functions-reference'
+        - name: Kluster för mikrotjänster
+          href: 'https://docs.microsoft.com/azure/service-fabric/service-fabric-cluster-creation-via-portal'
+    - name: Distribuera
+      items:
+        - name: Webb- och mobilappar från källkontroll
+          href: 'https://docs.microsoft.com/azure/app-service/deploy-continuous-deployment'
+        - name: Mikrotjänster lokalt
+          href: 'https://docs.microsoft.com/azure/service-fabric/service-fabric-get-started-with-a-local-cluster'
+        - name: Virtuell Linux-dator
+          href: 'https://docs.microsoft.com/azure/virtual-machines/linux/tutorial-manage-vm'
+        - name: Virtuell Windows-dator
+          href: 'https://docs.microsoft.com/azure/virtual-machines/windows/tutorial-manage-vm'
+    - name: Lagra data
+      items:
+        - name: Blobar
+          href: 'https://docs.microsoft.com/azure/storage/blobs/storage-dotnet-how-to-use-blobs'
+        - name: Filresurser
+          href: 'https://docs.microsoft.com/azure/storage/files/storage-dotnet-how-to-use-files'
+        - name: Nyckel/värde-par
+          href: 'https://docs.microsoft.com/azure/cosmos-db/create-table-dotnet'
+        - name: JSON-dokument
+          href: 'https://docs.microsoft.com/azure/cosmos-db/create-sql-api-dotnet'
+        - name: Relationstabeller
+          href: 'https://docs.microsoft.com/azure/sql-database/sql-database-get-started'
+        - name: Meddelandeköer
+          href: 'https://docs.microsoft.com/azure/storage/queues/storage-dotnet-how-to-use-queues'
+    - name: Skala
+      items:
+        - name: Webb- och mobilappar
+          href: 'https://docs.microsoft.com/azure/app-service/web-sites-scale'
+        - name: Virtuella datorer
+          href: 'https://docs.microsoft.com/azure/virtual-machine-scale-sets/virtual-machine-scale-sets-overview'
+        - name: Mikrotjänstappar
+          href: 'https://docs.microsoft.com/azure/service-fabric/service-fabric-concepts-scalability'
+    - name: Skydda
+      items:
+        - name: Webb- och mobilappar
+          href: 'https://docs.microsoft.com/azure/app-service/app-service-web-tutorial-custom-ssl'
+    - name: Backup
+      items:
+        - name: Webb- och mobilappar
+          href: 'https://docs.microsoft.com/azure/app-service/manage-backup'
+        - name: Virtuella datorer
+          href: 'https://docs.microsoft.com/azure/backup/backup-azure-vms-introduction'
+    - name: Övervaka
+      items:
+        - name: Webb- och mobilappar
+          href: 'https://docs.microsoft.com/azure/app-service/troubleshoot-diagnostic-logs'
+        - name: Virtuell Linux-dator
+          href: 'https://docs.microsoft.com/azure/virtual-machines/linux/tutorial-monitoring'
+        - name: Virtuell Windows-dator
+          href: 'https://docs.microsoft.com/azure/virtual-machines/windows/tutorial-monitoring'
+        - name: Mikrotjänster
+          href: 'https://docs.microsoft.com/azure/service-fabric/service-fabric-diagnostics-overview'
+        - name: Faktureringsaviseringar
+          href: 'https://docs.microsoft.com/azure/billing/billing-set-up-alerts'
+    - name: Automatisera
+      items:
+        - name: Skala virtuell Linux-dator
+          href: 'https://docs.microsoft.com/azure/virtual-machines/linux/tutorial-create-vmss'
+        - name: Skala virtuell Windows-dator
+          href: 'https://docs.microsoft.com/azure/virtual-machines/windows/tutorial-create-vmss'
 - name: Referens
   items:
-  - name: REST
-    href: https://docs.microsoft.com/rest/api/
-  - name: SDK:er
-    items:
-    - name: .NET
-      href: https://go.microsoft.com/fwlink/?linkid=834925
-    - name: Java
-      href: https://docs.microsoft.com/java/api/
-    - name: Node.js
-      href: https://azure.github.io/azure-sdk-for-node/
-    - name: PHP
-      href: https://github.com/Azure/azure-sdk-for-php/blob/master/README.md
-    - name: Python
-      href: http://azure-sdk-for-python.readthedocs.io/en/latest/
-    - name: Ruby
-      href: https://github.com/Azure/azure-sdk-for-ruby/blob/master/README.md
-  - name: Kommandoradsgränssnitt
-    items:
-    - name: Azure CLI
-      href: https://docs.microsoft.com/cli/azure/
-    - name: Azure PowerShell
-      href: https://docs.microsoft.com/powershell/
-  - name: Fakturering
-    href: https://docs.microsoft.com/azure/billing/billing-usage-rate-card-overview
+    - name: REST
+      href: 'https://docs.microsoft.com/rest/api/'
+    - name: 'SDK:er'
+      items:
+        - name: .NET
+          href: 'https://go.microsoft.com/fwlink/?linkid=834925'
+        - name: Java
+          href: 'https://docs.microsoft.com/java/api/'
+        - name: Node.js
+          href: 'https://azure.github.io/azure-sdk-for-node/'
+        - name: PHP
+          href: 'https://github.com/Azure/azure-sdk-for-php/blob/master/README.md'
+        - name: Python
+          href: 'http://azure-sdk-for-python.readthedocs.io/en/latest/'
+        - name: Ruby
+          href: 'https://github.com/Azure/azure-sdk-for-ruby/blob/master/README.md'
+    - name: Kommandoradsgränssnitt
+      items:
+        - name: Azure CLI
+          href: 'https://docs.microsoft.com/cli/azure/'
+        - name: Azure PowerShell
+          href: 'https://docs.microsoft.com/powershell/'
+    - name: Fakturering
+      href: 'https://docs.microsoft.com/azure/billing/billing-usage-rate-card-overview'
 - name: Resurser
   items:
-  - name: Begränsningar och kvoter för Azure
-    href: ../../azure-subscription-service-limits.md?toc=%2fazure%2fguides%2fdeveloper%2ftoc.json
-  - name: Azure-regioner
-    href: https://azure.microsoft.com/regions/
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Exempel
-    href: https://azure.microsoft.com/resources/samples/
-  - name: Videoklipp
-    href: https://azure.microsoft.com/resources/videos/home/
-ms.openlocfilehash: 33b715c595c22c5561c3ab61af9d96eebb9fc991
-ms.sourcegitcommit: 02d17ef9aff49423bef5b322a9315f7eab86d8ff
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/21/2019
-ms.locfileid: "58341245"
+    - name: Begränsningar och kvoter för Azure
+      href: ../../azure-subscription-service-limits.md?toc=%2fazure%2fguides%2fdeveloper%2ftoc.json
+    - name: Azure-regioner
+      href: 'https://azure.microsoft.com/regions/'
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Priskalkylator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: Exempel
+      href: 'https://azure.microsoft.com/resources/samples/'
+    - name: Videoklipp
+      href: 'https://azure.microsoft.com/resources/videos/home/'
