--- a/articles/iot-edge/index.yml
+++ b/articles/iot-edge/index.yml
@@ -1,14 +1,8 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: f0d4a689e783f8c460ee54b3613ac0fe432b59ad
-ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/18/2019
-ms.locfileid: "57862802"
 documentType: LandingData
 title: Azure IoT Edge
 metadata:
-  title: Azure IoT Edge – självstudier, API-referens
+  title: 'Azure IoT Edge – självstudier, API-referens'
   description: Använda Azure IoT Edge för att distribuera Azure-tjänster och anpassad affärslogik till enheter vid nätverksgränsen.
   author: kgremban
   manager: philmea
@@ -18,46 +12,46 @@ metadata:
   ms.date: 03/13/2019
   ms.author: kgremban
 abstract:
-  description: Azure IoT Edge är en IoT-tjänst (Sakernas Internet) som bygger på IoT Hub. Den här tjänsten är avsedd för kunder som vill analysera data på enheter, dvs. vid nätverksgränsen, i stället för i molnet. När du flyttar delar av din arbetsbelastning till nätverksgränsen går det åt mindre tid till att skicka meddelanden till molnet och dina enheter reagerar snabbare på tillståndsändringar.
+  description: 'Azure IoT Edge är en IoT-tjänst (Sakernas Internet) som bygger på IoT Hub. Den här tjänsten är avsedd för kunder som vill analysera data på enheter, dvs. vid nätverksgränsen, i stället för i molnet. När du flyttar delar av din arbetsbelastning till nätverksgränsen går det åt mindre tid till att skicka meddelanden till molnet och dina enheter reagerar snabbare på tillståndsändringar.'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
       src: ./media/index/iot-edge-thumbnail.png
       width: 250
-    title: Skapa den intelligenta nätverksgränsen med Azure IoT Edge (6:59)
-    href: https://channel9.msdn.com/Shows/Internet-of-Things-Show/Creating-the-intelligent-edge-with-Azure-IoT-Edge
+    title: 'Skapa den intelligenta nätverksgränsen med Azure IoT Edge (6:59)'
+    href: 'https://channel9.msdn.com/Shows/Internet-of-Things-Show/Creating-the-intelligent-edge-with-Azure-IoT-Edge'
     width: 250
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Skapa en virtuell Azure-dator, konfigurera den så att den körs som en IoT Edge-enhet och distribuera kod till den:'
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_Windows.svg
-      text: Windows
-      href: /azure/iot-edge/quickstart
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_linux-color.svg
-      text: Linux
-      href: /azure/iot-edge/quickstart-linux
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du installerar och konfigurerar IoT Edge, distribuerar moduler och använder Azure-tjänster som Stream Analytics och Custom Vision vid nätverksgränsen.
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Skapa en virtuell Azure-dator, konfigurera den så att den körs som en IoT Edge-enhet och distribuera kod till den:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_Windows.svg'
+            text: Windows
+            href: /azure/iot-edge/quickstart
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_linux-color.svg'
+            text: Linux
+            href: /azure/iot-edge/quickstart-linux
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/iot-edge/tutorial-deploy-function">Filtrera meddelanden med Azure Functions</a>
-    - html: <a href="/azure/iot-edge/tutorial-deploy-stream-analytics">Hitta medelvärden med Azure Stream Analytics som en modul</a>
-    - html: <a href="/azure/iot-edge/tutorial-deploy-machine-learning">Bedöma data med Azure Machine Learning som en modul</a>
-    - html: <a href="/azure/iot-edge/tutorial-deploy-custom-vision">Klassificera bilder med Custom Vision Service som en modul</a>
-    - html: <a href="/azure/iot-edge/tutorial-csharp-module">Filtrera data med en C#-modul</a>
-    - html: <a href="/azure/iot-edge/tutorial-python-module">Filtrera data med en Python-modul</a>
-    - html: <a href="/azure/iot-edge/tutorial-node-module">Filtrera data med en Node.js-modul</a>
-    - html: <a href="/azure/iot-edge/tutorial-java-module">Filtrera data med en Java-modul</a>
-    - html: <a href="/azure/iot-edge/tutorial-c-module">Filtrera data med en C-modul</a>
-    - html: <a href="/azure/iot-edge/tutorial-store-data-sql-server">Lagra data vid nätverksgränsen med SQL Server</a>
+      - type: paragraph
+        text: 'Lär dig hur du installerar och konfigurerar IoT Edge, distribuerar moduler och använder Azure-tjänster som Stream Analytics och Custom Vision vid nätverksgränsen.'
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="/azure/iot-edge/tutorial-deploy-function">Filtrera meddelanden med Azure Functions</a>
+          - html: <a href="/azure/iot-edge/tutorial-deploy-stream-analytics">Hitta medelvärden med Azure Stream Analytics som en modul</a>
+          - html: <a href="/azure/iot-edge/tutorial-deploy-machine-learning">Bedöma data med Azure Machine Learning som en modul</a>
+          - html: <a href="/azure/iot-edge/tutorial-deploy-custom-vision">Klassificera bilder med Custom Vision Service som en modul</a>
+          - html: '<a href="/azure/iot-edge/tutorial-csharp-module">Filtrera data med en C#-modul</a>'
+          - html: <a href="/azure/iot-edge/tutorial-python-module">Filtrera data med en Python-modul</a>
+          - html: <a href="/azure/iot-edge/tutorial-node-module">Filtrera data med en Node.js-modul</a>
+          - html: <a href="/azure/iot-edge/tutorial-java-module">Filtrera data med en Java-modul</a>
+          - html: <a href="/azure/iot-edge/tutorial-c-module">Filtrera data med en C-modul</a>
+          - html: <a href="/azure/iot-edge/tutorial-store-data-sql-server">Lagra data vid nätverksgränsen med SQL Server</a>
