--- a/articles/iot-hub/index.yml
+++ b/articles/iot-hub/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: bf548ff69d7ce92e8d08759a96a241adc5a36c0b
-ms.sourcegitcommit: 98645e63f657ffa2cc42f52fea911b1cdcd56453
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54828136"
 documentType: LandingData
 title: Dokumentation om IoT Hub
 metadata:
-  title: Dokumentation om Azure IoT Hub – Självstudier, API-referens | Microsoft Docs
-  description: Lär dig hur du använder IoT Hub för att ansluta, övervaka och styra miljontals Sakernas Internet-resurser. Självstudier, API-referenser, videor och annan dokumentation.
+  title: 'Dokumentation om Azure IoT Hub – Självstudier, API-referens | Microsoft Docs'
+  description: 'Lär dig hur du använder IoT Hub för att ansluta, övervaka och styra miljontals Sakernas Internet-resurser. Självstudier, API-referenser, videor och annan dokumentation.'
   author: dominicbetts
   manager: timlt
   ms.service: iot-hub
@@ -18,80 +12,80 @@ metadata:
   ms.date: 04/26/2018
   ms.author: dobett
 abstract:
-  description: Lär dig hur du använder IoT Hub för att ansluta, övervaka och styra miljontals Sakernas Internet-resurser. Självstudier, API-referenser, videor och annan dokumentation hjälper dig att distribuera tillförlitlig och dubbelriktad kommunikation mellan IoT-enheter och en lösnings serverdel.
+  description: 'Lär dig hur du använder IoT Hub för att ansluta, övervaka och styra miljontals Sakernas Internet-resurser. Självstudier, API-referenser, videor och annan dokumentation hjälper dig att distribuera tillförlitlig och dubbelriktad kommunikation mellan IoT-enheter och en lösnings serverdel.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_nodejs.svg
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_NET.svg
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_java.svg
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_python.svg
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_android.svg
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_c.svg
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_ios.svg
-    rows:
-    - title: Skicka telemetri
-      values:
-      - href: /azure/iot-hub/quickstart-send-telemetry-node
-      - href: /azure/iot-hub/quickstart-send-telemetry-dotnet
-      - href: /azure/iot-hub/quickstart-send-telemetry-java
-      - href: /azure/iot-hub/quickstart-send-telemetry-python
-      - href: /azure/iot-hub/quickstart-send-telemetry-android
-      - href: /azure/iot-hub/quickstart-send-telemetry-c
-      - href: /azure/iot-hub/quickstart-send-telemetry-ios
-    - title: Kontrollera en enhet
-      values:
-      - href: /azure/iot-hub/quickstart-control-device-node
-      - href: /azure/iot-hub/quickstart-control-device-dotnet
-      - href: /azure/iot-hub/quickstart-control-device-java
-      - href: /azure/iot-hub/quickstart-control-device-python
-      - href: /azure/iot-hub/quickstart-control-device-android
-    - title: Kommunicera med hjälp av enhetsströmmar (förhandsversion)
-      values:
-      - href: /azure/iot-hub/quickstart-device-streams-echo-nodejs
-      - href: /azure/iot-hub/quickstart-device-streams-echo-csharp
-      - href: 
-      - href: 
-      - href: 
-      - href: /azure/iot-hub/quickstart-device-streams-echo-c
-      - href: 
-    - title: SSH/RDP med hjälp av enhetsströmmar (förhandsversion)
-      values:
-      - href: /azure/iot-hub/quickstart-device-streams-proxy-nodejs
-      - href: /azure/iot-hub/quickstart-device-streams-proxy-csharp
-      - href: 
-      - href: 
-      - href: 
-      - href: /azure/iot-hub/quickstart-device-streams-proxy-c
-      - href: 
-- title: Steg för steg-självstudier
-  items:
-  - type: list
-    style: ordered
+  - title: Snabbstarter på 5 minuter
     items:
-    - html: <a href="/azure/iot-hub/tutorial-routing">Konfigurera automatisk meddelanderoutning i IoT Hub</a>
-    - html: <a href="/azure/iot-hub/tutorial-device-twins">Konfigurera dina enheter från en serverdelstjänst</a>
-    - html: <a href="/azure/iot-hub/tutorial-firmware-update">Implementera en uppdateringsprocess för enhetens inbyggda programvara</a>
-    - html: <a href="/azure/iot-hub/tutorial-connectivity">Använda en simulerad enhet för att testa anslutningen till din IoT-hubb</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_nodejs.svg'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_NET.svg'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_java.svg'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_python.svg'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_android.svg'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_c.svg'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_ios.svg'
+        rows:
+          - title: Skicka telemetri
+            values:
+              - href: /azure/iot-hub/quickstart-send-telemetry-node
+              - href: /azure/iot-hub/quickstart-send-telemetry-dotnet
+              - href: /azure/iot-hub/quickstart-send-telemetry-java
+              - href: /azure/iot-hub/quickstart-send-telemetry-python
+              - href: /azure/iot-hub/quickstart-send-telemetry-android
+              - href: /azure/iot-hub/quickstart-send-telemetry-c
+              - href: /azure/iot-hub/quickstart-send-telemetry-ios
+          - title: Kontrollera en enhet
+            values:
+              - href: /azure/iot-hub/quickstart-control-device-node
+              - href: /azure/iot-hub/quickstart-control-device-dotnet
+              - href: /azure/iot-hub/quickstart-control-device-java
+              - href: /azure/iot-hub/quickstart-control-device-python
+              - href: /azure/iot-hub/quickstart-control-device-android
+          - title: Kommunicera med hjälp av enhetsströmmar (förhandsversion)
+            values:
+              - href: /azure/iot-hub/quickstart-device-streams-echo-nodejs
+              - href: /azure/iot-hub/quickstart-device-streams-echo-csharp
+              - href: null
+              - href: null
+              - href: null
+              - href: /azure/iot-hub/quickstart-device-streams-echo-c
+              - href: null
+          - title: SSH/RDP med hjälp av enhetsströmmar (förhandsversion)
+            values:
+              - href: /azure/iot-hub/quickstart-device-streams-proxy-nodejs
+              - href: /azure/iot-hub/quickstart-device-streams-proxy-csharp
+              - href: null
+              - href: null
+              - href: null
+              - href: /azure/iot-hub/quickstart-device-streams-proxy-c
+              - href: null
+  - title: Steg för steg-självstudier
     items:
-    - title: Kommandorad
-      html: <p><a href="/cli/azure/iot">Azure CLI</a></p>
-    - title: Språk
-      html: <p><a href="/dotnet/api/microsoft.azure.devices">.NET (tjänst)</a></p><p><a href="/dotnet/api/microsoft.azure.devices.client">.NET (enheter)</a></p><p><a href="https://docs.microsoft.com/azure/iot-hub/iot-c-sdk-ref/">C (enhets-SDK)</a></p><p><a href="/java/api/com.microsoft.azure.sdk.iot.service">Java (tjänst)</a></p><p><a href="/java/api/com.microsoft.azure.sdk.iot.device">Java (enheter)</a></p><p><a href="/javascript/api/azure-iothub/?view=azure-iot-typescript-latest">Node.js (tjänst)</a></p><p><a href="/javascript/api/azure-iot-device/?view=azure-iot-typescript-latest">Node.js (enheter)</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/iothub/device">REST (enhet)</a></p><p><a href="/rest/api/iothub/service">REST (tjänst)</a></p><p><a href="/rest/api/iothub/iothubresource">REST (IoT Hub-resurs)</a></p><p><a href="/rest/api/iothub/certificates">REST (certifikat)</a></p>
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/iot-hub/tutorial-routing">Konfigurera automatisk meddelanderoutning i IoT Hub</a>
+          - html: <a href="/azure/iot-hub/tutorial-device-twins">Konfigurera dina enheter från en serverdelstjänst</a>
+          - html: <a href="/azure/iot-hub/tutorial-firmware-update">Implementera en uppdateringsprocess för enhetens inbyggda programvara</a>
+          - html: <a href="/azure/iot-hub/tutorial-connectivity">Använda en simulerad enhet för att testa anslutningen till din IoT-hubb</a>
+  - title: Referens
+    items:
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/cli/azure/iot">Azure CLI</a></p>
+          - title: Språk
+            html: '<p><a href="/dotnet/api/microsoft.azure.devices">.NET (tjänst)</a></p><p><a href="/dotnet/api/microsoft.azure.devices.client">.NET (enheter)</a></p><p><a href="https://docs.microsoft.com/azure/iot-hub/iot-c-sdk-ref/">C (enhets-SDK)</a></p><p><a href="/java/api/com.microsoft.azure.sdk.iot.service">Java (tjänst)</a></p><p><a href="/java/api/com.microsoft.azure.sdk.iot.device">Java (enheter)</a></p><p><a href="/javascript/api/azure-iothub/?view=azure-iot-typescript-latest">Node.js (tjänst)</a></p><p><a href="/javascript/api/azure-iot-device/?view=azure-iot-typescript-latest">Node.js (enheter)</a></p>'
+          - title: REST
+            html: <p><a href="/rest/api/iothub/device">REST (enhet)</a></p><p><a href="/rest/api/iothub/service">REST (tjänst)</a></p><p><a href="/rest/api/iothub/iothubresource">REST (IoT Hub-resurs)</a></p><p><a href="/rest/api/iothub/certificates">REST (certifikat)</a></p>
