--- a/articles/mysql/index.yml
+++ b/articles/mysql/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 4bfb09a9a0d50c3259d942bc60e0c35046a11254
-ms.sourcegitcommit: f7f4b83996640d6fa35aea889dbf9073ba4422f0
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 02/28/2019
-ms.locfileid: "56989737"
 documentType: LandingData
 title: Azure Database för MySQL-dokumentation
 metadata:
   document_id: 8d915ae6-9101-ad37-0736-3eaa59c2dd34
-  title: Dokumentation om Azure MYSQL – självstudier, API-referens | Microsoft Docs
+  title: 'Dokumentation om Azure MYSQL – självstudier, API-referens | Microsoft Docs'
   description: Azure Database for MySQL är en relationsdatabastjänst i Microsoft-molnet som är utformad för utvecklare och baserad på MySQL-databasmotorn för öppen källkod.
   author: ajlam
   ms.author: andrela
@@ -17,50 +11,50 @@ metadata:
   ms.topic: landing-page
   ms.date: 02/25/2019
 abstract:
-  description: Azure Database for MySQL är en relationsdatabastjänst baserad på MySQL-servermotorn för öppen källkod.  Det är en fullständigt hanterad databas som en tjänst som används för att hantera verksamhetskritiska arbetsbelastningar med förutsägbar prestanda och dynamisk skalbarhet. Utveckla program med Azure Database for MySQL och använd valfria verktyg för plattform och öppen källkod. Lär dig hur du använder Azure Database för MySQL med våra snabbstarter, självstudier och exempel.
+  description: 'Azure Database for MySQL är en relationsdatabastjänst baserad på MySQL-servermotorn för öppen källkod.  Det är en fullständigt hanterad databas som en tjänst som används för att hantera verksamhetskritiska arbetsbelastningar med förutsägbar prestanda och dynamisk skalbarhet. Utveckla program med Azure Database for MySQL och använd valfria verktyg för plattform och öppen källkod. Lär dig hur du använder Azure Database för MySQL med våra snabbstarter, självstudier och exempel.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Lär dig hur du skapar MySQL Database on Azure med hjälp av:'
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: /azure/virtual-machines/linux/media/index/portal.svg
-      text: Azure Portal
-      href: /azure/mysql/quickstart-create-mysql-server-database-using-azure-portal
-    - image:
-        src: /azure/virtual-machines/linux/media/index/cli.svg
-      text: Azure CLI
-      href: /azure/mysql/quickstart-create-mysql-server-database-using-azure-cli
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: 'Lär dig hur du utformar din databas och utvecklar appar:'
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Lär dig hur du skapar MySQL Database on Azure med hjälp av:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /azure/virtual-machines/linux/media/index/portal.svg
+            text: Azure Portal
+            href: /azure/mysql/quickstart-create-mysql-server-database-using-azure-portal
+          - image:
+              src: /azure/virtual-machines/linux/media/index/cli.svg
+            text: Azure CLI
+            href: /azure/mysql/quickstart-create-mysql-server-database-using-azure-cli
+  - title: Steg för steg-självstudier
     items:
-    - html: Utforma en databas&#58; <a href="/azure/mysql/tutorial-design-database-using-portal">Azure Portal</a> | <a href="/azure/mysql/tutorial-design-database-using-cli">Azure CLI</a>
-    - html: Skapa en webbapp&#58; <a href="https://portal.azure.com/#create/hub">Wordpress – Portal</a> | <a href="../app-service-web/app-service-web-tutorial-php-mysql.md?toc=%2fazure%2fmysql%2ftoc.json">PHP – Azure CLI</a>
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Hitta skript för att hantera vanliga uppgifter.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: 'Lär dig hur du utformar din databas och utvecklar appar:'
+      - type: list
+        style: ordered
+        items:
+          - html: 'Utforma en databas&#58; <a href="/azure/mysql/tutorial-design-database-using-portal">Azure Portal</a> | <a href="/azure/mysql/tutorial-design-database-using-cli">Azure CLI</a>'
+          - html: 'Skapa en webbapp&#58; <a href="https://portal.azure.com/#create/hub">Wordpress – Portal</a> | <a href="../app-service-web/app-service-web-tutorial-php-mysql.md?toc=%2fazure%2fmysql%2ftoc.json">PHP – Azure CLI</a>'
+  - title: Exempel
     items:
-    - html: <a href="/azure/mysql/sample-scripts-azure-cli">Azure CLI</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Hitta skript för att hantera vanliga uppgifter.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/mysql/sample-scripts-azure-cli">Azure CLI</a>
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="/cli/azure/mysql">Azure CLI</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/mysql">REST-API</a></p>
-    - title: Azure Resource Manager
-      html: <p><a href="/azure/templates/microsoft.dbformysql/allversions">Resource Manager-mallar</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/cli/azure/mysql">Azure CLI</a></p>
+          - title: REST
+            html: <p><a href="/rest/api/mysql">REST-API</a></p>
+          - title: Azure Resource Manager
+            html: <p><a href="/azure/templates/microsoft.dbformysql/allversions">Resource Manager-mallar</a></p>
