--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -1,251 +1,244 @@
-items:
 - name: Azure DB för PostgreSQL-dokument
   href: index.yml
 - name: Översikt
   items:
-  - name: Vad är Azure DB for PostgreSQL?
-    href: overview.md
+    - name: Vad är Azure DB for PostgreSQL?
+      href: overview.md
 - name: Snabbstarter
-  items:
-  - name: Skapa DB – Portal
-    href: quickstart-create-server-database-portal.md
-  - name: Skapa DB – Azure CLI
-    href: quickstart-create-server-database-azure-cli.md
-  - name: Skapa DB – Azure CLI up-kommando
-    href: quickstart-create-server-up-azure-cli.md
-  - name: Ansluta och fråga
-    items:
-    - name: Python
-      href: connect-python.md
-    - name: Node.js
-      href: connect-nodejs.md
-    - name: Java
-      href: connect-java.md
-    - name: Ruby
-      href: connect-ruby.md
-    - name: PHP
-      href: connect-php.md
-    - name: .NET
-      href: connect-csharp.md
-    - name: Go
-      href: connect-go.md
   expanded: true
+  items:
+    - name: Skapa DB – Portal
+      href: quickstart-create-server-database-portal.md
+    - name: Skapa DB – Azure CLI
+      href: quickstart-create-server-database-azure-cli.md
+    - name: Skapa DB – Azure CLI up-kommando
+      href: quickstart-create-server-up-azure-cli.md
+    - name: Ansluta och fråga
+      items:
+        - name: Python
+          href: connect-python.md
+        - name: Node.js
+          href: connect-nodejs.md
+        - name: Java
+          href: connect-java.md
+        - name: Ruby
+          href: connect-ruby.md
+        - name: PHP
+          href: connect-php.md
+        - name: .NET
+          href: connect-csharp.md
+        - name: Go
+          href: connect-go.md
 - name: Självstudier
   items:
-  - name: 1 – Utforma en databas
-    items:
-    - name: Azure Portal
-      href: tutorial-design-database-using-azure-portal.md
-    - name: Azure CLI
-      href: tutorial-design-database-using-azure-cli.md
-  - name: '2 – Utforma webbapp: Python'
-    href: ../app-service/containers/tutorial-python-postgresql-app.md
-    maintainContext: true
-  - name: 3 – Övervaka och finjustera
-    href: tutorial-monitor-and-tune.md
+    - name: 1 – Utforma en databas
+      items:
+        - name: Azure Portal
+          href: tutorial-design-database-using-azure-portal.md
+        - name: Azure CLI
+          href: tutorial-design-database-using-azure-cli.md
+    - name: '2 – Utforma webbapp: Python'
+      href: ../app-service/containers/tutorial-python-postgresql-app.md
+      maintainContext: true
+    - name: 3 – Övervaka och finjustera
+      href: tutorial-monitor-and-tune.md
 - name: Exempel
   items:
-  - name: Azure CLI
-    href: sample-scripts-azure-cli.md
+    - name: Azure CLI
+      href: sample-scripts-azure-cli.md
 - name: Begrepp
   items:
-  - name: Databas och servrar
-    items:
-    - name: Servrar
-      href: concepts-servers.md
-    - name: Versioner som stöds
-      href: concepts-supported-versions.md
-    - name: PostgreSQL-tillägg
-      href: concepts-extensions.md
-    - name: Hög tillgänglighet
-      href: concepts-high-availability.md
-  - name: Resurser
-    items:
-    - name: Prisnivåer
-      href: concepts-pricing-tiers.md
-    - name: Begränsningar
-      href: concepts-limits.md
-  - name: Dataåtkomst och säkerhet
-    items:
-    - name: Brandväggsregler
-      href: concepts-firewall-rules.md
-    - name: Konfigurera SSL
-      href: concepts-ssl-connection-security.md
-    - name: Advanced Threat Protection
-      href: concepts-data-access-and-security-threat-protection.md
-    - name: VNet
-      href: concepts-data-access-and-security-vnet.md
-  - name: Verksamhetskontinuitet
-    items:
-    - name: Översikt
-      href: concepts-business-continuity.md
-    - name: Säkerhetskopiering och återställning
-      href: concepts-backup.md
-  - name: Övervaka och finjustera
-    items:
+    - name: Databas och servrar
+      items:
+        - name: Servrar
+          href: concepts-servers.md
+        - name: Versioner som stöds
+          href: concepts-supported-versions.md
+        - name: PostgreSQL-tillägg
+          href: concepts-extensions.md
+        - name: Hög tillgänglighet
+          href: concepts-high-availability.md
+    - name: Resurser
+      items:
+        - name: Prisnivåer
+          href: concepts-pricing-tiers.md
+        - name: Begränsningar
+          href: concepts-limits.md
+    - name: Dataåtkomst och säkerhet
+      items:
+        - name: Brandväggsregler
+          href: concepts-firewall-rules.md
+        - name: Konfigurera SSL
+          href: concepts-ssl-connection-security.md
+        - name: Advanced Threat Protection
+          href: concepts-data-access-and-security-threat-protection.md
+        - name: VNet
+          href: concepts-data-access-and-security-vnet.md
+    - name: Verksamhetskontinuitet
+      items:
+        - name: Översikt
+          href: concepts-business-continuity.md
+        - name: Säkerhetskopiering och återställning
+          href: concepts-backup.md
     - name: Övervaka och finjustera
-      href: concepts-monitoring.md
-    - name: Serverloggar
-      href: concepts-server-logs.md
-    - name: Query Store
       items:
-      - name: Query Store
-        href: concepts-query-store.md
-      - name: Query Store-användningsscenarier
-        href: concepts-query-store-scenarios.md
-      - name: Metodtips för Query Store
-        href: concepts-query-store-best-practices.md
-    - name: Query Performance Insight
-      href: concepts-query-performance-insight.md
-    - name: Prestandarekommendationer
-      href: concepts-performance-recommendations.md
-  - name: Utveckling
-    items:
-    - name: Anslutningsbibliotek
-      href: concepts-connection-libraries.md
-    - name: Anslutningsåterhämtning
-      href: concepts-connectivity.md
-    - name: Utveckla med Azure Kubernetes Service (AKS)
-      href: concepts-aks.md
-    - name: Java
+        - name: Övervaka och finjustera
+          href: concepts-monitoring.md
+        - name: Serverloggar
+          href: concepts-server-logs.md
+        - name: Query Store
+          items:
+            - name: Query Store
+              href: concepts-query-store.md
+            - name: Query Store-användningsscenarier
+              href: concepts-query-store-scenarios.md
+            - name: Metodtips för Query Store
+              href: concepts-query-store-best-practices.md
+        - name: Query Performance Insight
+          href: concepts-query-performance-insight.md
+        - name: Prestandarekommendationer
+          href: concepts-performance-recommendations.md
+    - name: Utveckling
       items:
-      - name: Konfigurera Spring Data JDBC
-        href: /java/azure/spring-framework/configure-spring-data-jdbc-with-azure-postgresql
-      - name: Konfigurera Spring Data JPA
-        href: /java/azure/spring-framework/configure-spring-data-jpa-with-azure-postgresql
-  - name: Replikering
-    items:
-    - name: Skrivskyddade repliker
-      href: concepts-read-replicas.md
+        - name: Anslutningsbibliotek
+          href: concepts-connection-libraries.md
+        - name: Anslutningsåterhämtning
+          href: concepts-connectivity.md
+        - name: Utveckla med Azure Kubernetes Service (AKS)
+          href: concepts-aks.md
+        - name: Java
+          items:
+            - name: Konfigurera Spring Data JDBC
+              href: /java/azure/spring-framework/configure-spring-data-jdbc-with-azure-postgresql
+            - name: Konfigurera Spring Data JPA
+              href: /java/azure/spring-framework/configure-spring-data-jpa-with-azure-postgresql
+    - name: Replikering
+      items:
+        - name: Skrivskyddade repliker
+          href: concepts-read-replicas.md
 - name: Instruktionsguider
   items:
-  - name: Skapa användare
-    href: howto-create-users.md
-  - name: Optimera
-    items:
-    - name: Massinfogning
-      href: howto-optimize-bulk-inserts.md
-    - name: Autovacuum
-      href: howto-optimize-autovacuum.md
-    - name: Samling med frågestatistik
-      href: howto-optimize-query-stats-collection.md
-    - name: Strategi för popup-tabell
-      href: howto-optimize-query-time-with-toast-table-storage-strategy.md
-  - name: Hantera brandväggen
-    items:
-    - name: Azure Portal
-      href: howto-manage-firewall-using-portal.md
-    - name: Azure CLI
-      href: howto-manage-firewall-using-cli.md
-  - name: Återställ en server
-    items:
-    - name: Azure Portal
-      href: howto-restore-server-portal.md
-    - name: Azure CLI
-      href: howto-restore-server-cli.md
-  - name: Migrera en databas
-    items:
-    - name: Dumpa och återställa
-      href: howto-migrate-using-dump-and-restore.md
-    - name: Importera och exportera
-      href: howto-migrate-using-export-and-import.md
-    - name: Minimal stilleståndstid vid migrering
-      href: howto-migrate-online.md
-  - name: Konfigurera serverparametrar
-    items:
-    - name: Azure Portal
-      href: howto-configure-server-parameters-using-portal.md
-    - name: Azure CLI
-      href: howto-configure-server-parameters-using-cli.md
-  - name: Åtkomst till serverloggar
-    items:
-    - name: Azure Portal
-      href: howto-configure-server-logs-in-portal.md
-    - name: Azure CLI
-      href: howto-configure-server-logs-using-cli.md
-  - name: Övervaka
-    items:
-    - name: Skapa aviseringar för mått
-      href: howto-alert-on-metric.md
-  - name: Felsöka
-    items:
-    - name: Felsöka anslutningsfel
-      href: howto-troubleshoot-common-connection-issues.md
-  - name: Advanced Threat Protection
-    items:
-    - name: Azure Portal
-      href: howto-database-threat-protection-portal.md
-  - name: Virtual Network
-    items:
-    - name: Azure Portal
-      href: howto-manage-vnet-using-portal.md
-    - name: Azure CLI
-      href: howto-manage-vnet-using-cli.md
-  - name: Starta om servern
-    items:
-    - name: Azure Portal
-      href: howto-restart-server-portal.md
-    - name: Azure CLI
-      href: howto-restart-server-cli.md
-  - name: Replikering
-    items:
-    - name: Hantera skrivskyddade repliker på Azure-portalen
-      href: howto-read-replicas-portal.md
-    - name: Hantera skrivskyddade repliker i Azure CLI
-      href: howto-read-replicas-cli.md
+    - name: Skapa användare
+      href: howto-create-users.md
+    - name: Optimera
+      items:
+        - name: Massinfogning
+          href: howto-optimize-bulk-inserts.md
+        - name: Autovacuum
+          href: howto-optimize-autovacuum.md
+        - name: Samling med frågestatistik
+          href: howto-optimize-query-stats-collection.md
+        - name: Strategi för popup-tabell
+          href: howto-optimize-query-time-with-toast-table-storage-strategy.md
+    - name: Hantera brandväggen
+      items:
+        - name: Azure Portal
+          href: howto-manage-firewall-using-portal.md
+        - name: Azure CLI
+          href: howto-manage-firewall-using-cli.md
+    - name: Återställ en server
+      items:
+        - name: Azure Portal
+          href: howto-restore-server-portal.md
+        - name: Azure CLI
+          href: howto-restore-server-cli.md
+    - name: Migrera en databas
+      items:
+        - name: Dumpa och återställa
+          href: howto-migrate-using-dump-and-restore.md
+        - name: Importera och exportera
+          href: howto-migrate-using-export-and-import.md
+        - name: Minimal stilleståndstid vid migrering
+          href: howto-migrate-online.md
+    - name: Konfigurera serverparametrar
+      items:
+        - name: Azure Portal
+          href: howto-configure-server-parameters-using-portal.md
+        - name: Azure CLI
+          href: howto-configure-server-parameters-using-cli.md
+    - name: Åtkomst till serverloggar
+      items:
+        - name: Azure Portal
+          href: howto-configure-server-logs-in-portal.md
+        - name: Azure CLI
+          href: howto-configure-server-logs-using-cli.md
+    - name: Övervaka
+      items:
+        - name: Skapa aviseringar för mått
+          href: howto-alert-on-metric.md
+    - name: Felsöka
+      items:
+        - name: Felsöka anslutningsfel
+          href: howto-troubleshoot-common-connection-issues.md
+    - name: Advanced Threat Protection
+      items:
+        - name: Azure Portal
+          href: howto-database-threat-protection-portal.md
+    - name: Virtual Network
+      items:
+        - name: Azure Portal
+          href: howto-manage-vnet-using-portal.md
+        - name: Azure CLI
+          href: howto-manage-vnet-using-cli.md
+    - name: Starta om servern
+      items:
+        - name: Azure Portal
+          href: howto-restart-server-portal.md
+        - name: Azure CLI
+          href: howto-restart-server-cli.md
+    - name: Replikering
+      items:
+        - name: Hantera skrivskyddade repliker på Azure-portalen
+          href: howto-read-replicas-portal.md
+        - name: Hantera skrivskyddade repliker i Azure CLI
+          href: howto-read-replicas-cli.md
 - name: Referens
   items:
-  - name: Azure CLI
-    href: /cli/azure/postgres
-  - name: REST-API
-    href: /rest/api/postgresql
-  - name: Resource Manager-mall
-    href: /azure/templates/microsoft.dbforpostgresql/allversions
+    - name: Azure CLI
+      href: /cli/azure/postgres
+    - name: REST-API
+      href: /rest/api/postgresql
+    - name: Resource Manager-mall
+      href: /azure/templates/microsoft.dbforpostgresql/allversions
 - name: Resurser
   items:
-  - name: Utveckla dina färdigheter med Microsoft Learn
-    href: /learn/browse/
-  - name: Distributionsmallar
-    href: https://azure.microsoft.com/resources/templates/?resourceType=Microsoft.Dbforpostgresql
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=databases
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/postgresql/
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/forums/azure/en-US/home?forum=AzureDatabaseforPostgreSQL
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-database-postgresql
-  - name: Videoklipp
-    items:
-    - name: Produktvideor
-      href: videos.md
-    - name: Videoserier med instruktioner
+    - name: Utveckla dina färdigheter med Microsoft Learn
+      href: /learn/browse/
+    - name: Distributionsmallar
+      href: 'https://azure.microsoft.com/resources/templates/?resourceType=Microsoft.Dbforpostgresql'
+    - name: Azure-översikt
+      href: 'https://azure.microsoft.com/roadmap/?category=databases'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/postgresql/'
+    - name: MSDN-forum
+      href: 'https://social.msdn.microsoft.com/forums/azure/en-US/home?forum=AzureDatabaseforPostgreSQL'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-database-postgresql'
+    - name: Videoklipp
       items:
-      - name: Lär dig mer om produktfunktioner och fördelar
-        href: https://aka.ms/postg-intro-vid
-      - name: Migrera din PostgreSQL-app till Azure
-        href: https://aka.ms/postg-migrate-vid
-      - name: Skapa intelligenta appar med Cognitive Services
-        href: https://aka.ms/postg-cogsvs-vid
-      - name: Anslut containrar med OSBA
-        href: https://aka.ms/postg-osba-vid
-      - name: Anslut din apps data till Power BI
-        href: https://aka.ms/postg-powerbi-vid
-  - name: Feedback-forum
-    href: https://feedback.azure.com/forums/597976-azure-database-for-postgresql
-  - name: Regional tillgänglighet
-    href: https://azure.microsoft.com/regions/services/
-  - name: Supportalternativ
-    href: https://azure.microsoft.com/support/options/
-  - name: Kundberättelser
-    href: https://customers.microsoft.com/en-us/search?sq="Azure%20Database%20for%20PostgreSQL"
-  - name: Partner
-    href: partners-migration-postgresql.md
-  - name: Guide för databasmigrering
-    href: https://datamigration.microsoft.com/
-ms.openlocfilehash: 5958953a879a84a3a0b78b91ca276ad4bf48fc00
-ms.sourcegitcommit: 956749f17569a55bcafba95aef9abcbb345eb929
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/29/2019
-ms.locfileid: "58629198"
+        - name: Produktvideor
+          href: videos.md
+        - name: Videoserier med instruktioner
+          items:
+            - name: Lär dig mer om produktfunktioner och fördelar
+              href: 'https://aka.ms/postg-intro-vid'
+            - name: Migrera din PostgreSQL-app till Azure
+              href: 'https://aka.ms/postg-migrate-vid'
+            - name: Skapa intelligenta appar med Cognitive Services
+              href: 'https://aka.ms/postg-cogsvs-vid'
+            - name: Anslut containrar med OSBA
+              href: 'https://aka.ms/postg-osba-vid'
+            - name: Anslut din apps data till Power BI
+              href: 'https://aka.ms/postg-powerbi-vid'
+    - name: Feedback-forum
+      href: 'https://feedback.azure.com/forums/597976-azure-database-for-postgresql'
+    - name: Regional tillgänglighet
+      href: 'https://azure.microsoft.com/regions/services/'
+    - name: Supportalternativ
+      href: 'https://azure.microsoft.com/support/options/'
+    - name: Kundberättelser
+      href: 'https://customers.microsoft.com/en-us/search?sq="Azure%20Database%20for%20PostgreSQL"'
+    - name: Partner
+      href: partners-migration-postgresql.md
+    - name: Guide för databasmigrering
+      href: 'https://datamigration.microsoft.com/'
