--- a/articles/service-fabric-mesh/index.yml
+++ b/articles/service-fabric-mesh/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: eaceb3170e3b3f7bd155f42521102365401f0421
-ms.sourcegitcommit: 02d17ef9aff49423bef5b322a9315f7eab86d8ff
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/21/2019
-ms.locfileid: "58337459"
 documentType: LandingData
 title: Dokumentation om Azure Service Fabric Mesh
 metadata:
-  title: Dokumentation om Azure Service Fabric Mesh – Självstudier, API-referens | Microsoft Doc
-  meta.description: Azure Service Fabric Mesh is a fully managed service enabling developers to deploy containerized applications without managing virtual machines, storage, or networking resources. Learn how to use Service Fabric Mesh with our quickstarts and tutorials.
+  title: 'Dokumentation om Azure Service Fabric Mesh – Självstudier, API-referens | Microsoft Doc'
+  meta.description: 'Azure Service Fabric Mesh is a fully managed service enabling developers to deploy containerized applications without managing virtual machines, storage, or networking resources. Learn how to use Service Fabric Mesh with our quickstarts and tutorials.'
   services: service-fabric-mesh
   author: dkkapur
   manager: timlt
@@ -20,37 +14,37 @@ metadata:
   ms.date: 07/26/2018
   ms.author: dekapur
 abstract:
-  description: Azure Service Fabric Mesh är en helt hanterad tjänst som gör det möjligt för utvecklare att skapa och distribuera verksamhetskritiska program utan att behöva hantera någon infrastruktur.  Använd Service Fabric Mesh för att skapa och köra säkra, distribuerade mikrotjänstprogram som kan skalas på begäran. Lär dig att använda Service Fabric Mesh med hjälp av våra snabbstarter och självstudier.  Mer information finns i <a href="/azure/service-fabric-mesh/service-fabric-mesh-overview">översikten över Service Fabric Mesh</a> och <a href="/azure/service-fabric-mesh/service-fabric-mesh-faq">vanliga frågor och svar</a>.
+  description: 'Azure Service Fabric Mesh är en helt hanterad tjänst som gör det möjligt för utvecklare att skapa och distribuera verksamhetskritiska program utan att behöva hantera någon infrastruktur.  Använd Service Fabric Mesh för att skapa och köra säkra, distribuerade mikrotjänstprogram som kan skalas på begäran. Lär dig att använda Service Fabric Mesh med hjälp av våra snabbstarter och självstudier.  Mer information finns i <a href="/azure/service-fabric-mesh/service-fabric-mesh-overview">översikten över Service Fabric Mesh</a> och <a href="/azure/service-fabric-mesh/service-fabric-mesh-faq">vanliga frågor och svar</a>.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Lär dig att distribuera Service Fabric-program och -behållare till Service Fabric Mesh
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: https://docs.microsoft.com/media/common/i_cligeneric.svg
-      text: Distribuera Hello World till Service Fabric Mesh
-      href: /azure/service-fabric-mesh/service-fabric-mesh-quickstart-deploy-container
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_netcore.svg
-      text: Skapa och distribuera en webbapp till Service Fabric Mesh
-      href: /azure/service-fabric-mesh/service-fabric-mesh-quickstart-dotnet-core
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du skapar och distribuerar en Mesh-app med Visual Studio eller Azure CLI.
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: Lär dig att distribuera Service Fabric-program och -behållare till Service Fabric Mesh
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_cligeneric.svg'
+            text: Distribuera Hello World till Service Fabric Mesh
+            href: /azure/service-fabric-mesh/service-fabric-mesh-quickstart-deploy-container
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_netcore.svg'
+            text: Skapa och distribuera en webbapp till Service Fabric Mesh
+            href: /azure/service-fabric-mesh/service-fabric-mesh-quickstart-dotnet-core
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/service-fabric-mesh/service-fabric-mesh-tutorial-create-dotnetcore">Skapa, felsöka, distribuera och uppgradera en app för flera tjänster till Service Fabric Mesh med Visual Studio.</a>
-    - html: <a href="/azure/service-fabric-mesh/service-fabric-mesh-tutorial-template-deploy-app">Distribuera, skala och uppgradera en Service Fabric Mesh-app med en mall.</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Lär dig hur du skapar och distribuerar en Mesh-app med Visual Studio eller Azure CLI.
+      - type: list
+        style: unordered
+        items:
+          - html: '<a href="/azure/service-fabric-mesh/service-fabric-mesh-tutorial-create-dotnetcore">Skapa, felsöka, distribuera och uppgradera en app för flera tjänster till Service Fabric Mesh med Visual Studio.</a>'
+          - html: '<a href="/azure/service-fabric-mesh/service-fabric-mesh-tutorial-template-deploy-app">Distribuera, skala och uppgradera en Service Fabric Mesh-app med en mall.</a>'
+  - title: Referens
     items:
-    - title: REST
-      html: <p><a href="/rest/api/servicefabric/sfmeshrp-index">REST API:er för Service Fabric Mesh-resursprovider</a></p><p><a href="/rest/api/servicefabric/sfclient-index#service-fabric-resource-model">REST API:er för Service Fabric-klientresurs</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: REST
+            html: '<p><a href="/rest/api/servicefabric/sfmeshrp-index">REST API:er för Service Fabric Mesh-resursprovider</a></p><p><a href="/rest/api/servicefabric/sfclient-index#service-fabric-resource-model">REST API:er för Service Fabric-klientresurs</a></p>'
