--- a/articles/spatial-anchors/index.yml
+++ b/articles/spatial-anchors/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: df4684f9e7fd57c5a7600b26505413d60417043e
-ms.sourcegitcommit: e88188bc015525d5bead239ed562067d3fae9822
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 02/24/2019
-ms.locfileid: "56753418"
 documentType: LandingData
 title: Dokumentation om Azure Spatial Anchors
 metadata:
   document_id: 8ba93ac8-1984-48d5-8944-329e6653e39d
-  title: Dokumentation om Azure Spatial Anchors – självstudier, API-referens
+  title: 'Dokumentation om Azure Spatial Anchors – självstudier, API-referens'
   meta.description: Learn how to use Azure Spatial Anchors to build apps with durable spatial anchors.
   services: azure-spatial-anchors
   author: craigktreasure
@@ -23,49 +17,49 @@ metadata:
 abstract:
   description: Spatial Anchors är en plattformsoberoende utvecklartjänst som du kan använda för att skapa Mixed Reality-upplevelser med hjälp av objekt som bevarar sin plats mellan enheter över tid.
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: 'Lär dig hur du skapar ditt första program med Azure Spatial Anchors:'
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: /media/logos/logo_android.svg
-        alt: 
-      text: Android
-      href: quickstarts/get-started-android.md
-    - image:
-        src: /media/logos/logo_Windows.svg
-        alt: 
-      text: HoloLens
-      href: quickstarts/get-started-hololens.md
-    - image:
-        src: /media/logos/logo_ios.svg
-        alt: 
-      text: iOS
-      href: quickstarts/get-started-ios.md
-    - image:
-        src: /media/logos/logo_android.svg
-        alt: 
-      text: Unity Android
-      href: quickstarts/get-started-unity-android.md
-    - image:
-        src: /media/logos/logo_Windows.svg
-        alt: 
-      text: Unity HoloLens
-      href: quickstarts/get-started-unity-hololens.md
-    - image:
-        src: /media/logos/logo_ios.svg
-        alt: 
-      text: Unity iOS
-      href: quickstarts/get-started-unity-ios.md
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du konfigurerar, hanterar, bygger och distribuerar en app med Azure Spatial Anchors.
-  - type: list
-    style: ordered
+      - type: paragraph
+        text: 'Lär dig hur du skapar ditt första program med Azure Spatial Anchors:'
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: /media/logos/logo_android.svg
+              alt: null
+            text: Android
+            href: quickstarts/get-started-android.md
+          - image:
+              src: /media/logos/logo_Windows.svg
+              alt: null
+            text: HoloLens
+            href: quickstarts/get-started-hololens.md
+          - image:
+              src: /media/logos/logo_ios.svg
+              alt: null
+            text: iOS
+            href: quickstarts/get-started-ios.md
+          - image:
+              src: /media/logos/logo_android.svg
+              alt: null
+            text: Unity Android
+            href: quickstarts/get-started-unity-android.md
+          - image:
+              src: /media/logos/logo_Windows.svg
+              alt: null
+            text: Unity HoloLens
+            href: quickstarts/get-started-unity-hololens.md
+          - image:
+              src: /media/logos/logo_ios.svg
+              alt: null
+            text: Unity iOS
+            href: quickstarts/get-started-unity-ios.md
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="/azure/spatial-anchors/tutorials/tutorial-share-anchors-across-devices">Dela i Unity.</a>
-    - html: <a href="/azure/spatial-anchors/tutorials/tutorial-use-cosmos-db-to-store-anchors">Dela i Unity med Azure Cosmos DB.</a>
+      - type: paragraph
+        text: 'Lär dig hur du konfigurerar, hanterar, bygger och distribuerar en app med Azure Spatial Anchors.'
+      - type: list
+        style: ordered
+        items:
+          - html: <a href="/azure/spatial-anchors/tutorials/tutorial-share-anchors-across-devices">Dela i Unity.</a>
+          - html: <a href="/azure/spatial-anchors/tutorials/tutorial-use-cosmos-db-to-store-anchors">Dela i Unity med Azure Cosmos DB.</a>
